@@ -20,7 +20,7 @@ import com.planet_ink.coffee_mud.Races.interfaces.*;
 import java.util.*;
 
 /*
-   Copyright 2006-2020 Bo Zimmerman
+   Copyright 2006-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -80,8 +80,10 @@ public class GenAbility extends StdAbility
 	private static final int V_UNIN=30;//S
 	private static final int V_MOCK=31;//S
 	private static final int V_MOKT=32;//S
+	private static final int V_TMSF=33;//S
+	private static final int V_NARG=34;//I
 
-	private static final int NUM_VS=33;//S
+	private static final int NUM_VS=35;//S
 
 	private static final Object[] makeEmpty()
 	{
@@ -92,14 +94,14 @@ public class GenAbility extends StdAbility
 		O[V_MAXR]=Integer.valueOf(0);
 		O[V_MINR]=Integer.valueOf(0);
 		O[V_AUTO]=Boolean.FALSE;
-		O[V_FLAG]=Integer.valueOf(0);
+		O[V_FLAG]=Long.valueOf(0);
 		O[V_CLAS]=Integer.valueOf(Ability.ACODE_SPELL|Ability.DOMAIN_ABJURATION);
 		O[V_OMAN]=Integer.valueOf(-1);
 		O[V_USAG]=Integer.valueOf(Ability.USAGE_MANA);
 		O[V_CAFF]=Integer.valueOf(Ability.CAN_MOBS);
 		O[V_CTAR]=Integer.valueOf(Ability.CAN_MOBS);
 		O[V_QUAL]=Integer.valueOf(Ability.QUALITY_BENEFICIAL_OTHERS);
-		O[V_HERE]=CMClass.getAbility("Prop_HereAdjuster");
+		O[V_HERE]="";
 		O[V_SCRP]="";
 		O[V_CMSK]="";
 		O[V_TMSK]="";
@@ -113,12 +115,14 @@ public class GenAbility extends StdAbility
 		O[V_PDMG]="0";
 		O[V_HELP]="<ABILITY>This ability is not yet documented.";
 		O[V_TKBC]=Integer.valueOf(0);
-		O[V_TKOV]=Integer.valueOf(0);
+		O[V_TKOV]="0";
 		O[V_TKAF]=Boolean.FALSE;
 		O[V_CHAN]=Boolean.FALSE;
 		O[V_UNIN]="";
 		O[V_MOCK]="";
 		O[V_MOKT]="";
+		O[V_TMSF]="";
+		O[V_NARG]=Integer.valueOf(0);
 		return O;
 	}
 
@@ -150,10 +154,16 @@ public class GenAbility extends StdAbility
 	protected boolean		oneTimeChecked	= false;
 	protected List<Ability>	postEffects		= new Vector<Ability>(1);
 	protected Ability		quietEffect		= null;
+	protected Ability		hereEffect		= null;
 
 	public Ability getQuietAffect()
 	{
 		return quietEffect;
+	}
+
+	public Ability getHereAffect()
+	{
+		return hereEffect;
 	}
 
 	public ScriptingEngine getScripter()
@@ -227,7 +237,7 @@ public class GenAbility extends StdAbility
 	@Override
 	public long flags()
 	{
-		return ((Integer) V(ID, V_FLAG)).intValue();
+		return ((Long) V(ID, V_FLAG)).longValue();
 	}
 
 	@Override
@@ -266,13 +276,8 @@ public class GenAbility extends StdAbility
 		return ((Integer) V(ID, V_QUAL)).intValue();
 	}
 
-	public int tickOverride()
-	{
-		return ((Integer) V(ID, V_TKOV)).intValue();
-	}
-
 	@Override
-	protected int getTicksBetweenCasts()
+	public int getTicksBetweenCasts()
 	{
 		return ((Integer) V(ID, V_TKBC)).intValue();
 	}
@@ -299,7 +304,7 @@ public class GenAbility extends StdAbility
 	{
 		try
 		{
-			final GenAbility A = this.getClass().newInstance();
+			final GenAbility A = this.getClass().getDeclaredConstructor().newInstance();
 			A.ID=ID;
 			getScripter();
 			A.scriptParmHash=scriptParmHash;
@@ -374,6 +379,31 @@ public class GenAbility extends StdAbility
 		return effects;
 	}
 
+	protected void prepHereAffect(final MOB mob, final Physical target, final int asLevel)
+	{
+		this.hereEffect=null;
+		if(((String)V(ID(), V_HERE)).trim().length()>0)
+		{
+			this.hereEffect = CMClass.getAbility("Prop_HereAdjuster");
+			if(this.hereEffect != null)
+			{
+				final String[] vars = new String[] {
+					""+mob.phyStats().level(),
+					""+target.phyStats().level(),
+					""+super.getXLEVELLevel(mob),
+					""+super.getX1Level(mob),
+					""+super.getX2Level(mob),
+					""+super.getX3Level(mob),
+					""+super.getX4Level(mob),
+					""+super.getX5Level(mob),
+					""+adjustedLevel(mob,asLevel)
+				};
+				final String miscText= CMStrings.replaceVariables((String)V(ID,V_HERE), vars);
+				this.hereEffect.setMiscText(miscText);
+			}
+		}
+	}
+
 	@Override
 	public boolean invoke(final MOB mob, final List<String> commands, final Physical givenTarget, final boolean auto, final int asLevel)
 	{
@@ -387,6 +417,7 @@ public class GenAbility extends StdAbility
 			return false;
 		}
 		// dont forget to allow super. calls to Spell.invoke, Chant.invoke, etc.. based on classification?
+		final int nargs = ((Integer)V(ID,V_NARG)).intValue();
 		Physical target=givenTarget;
 		if((this.abstractQuality()==Ability.QUALITY_BENEFICIAL_SELF)
 		||(this.abstractQuality()==Ability.QUALITY_OK_SELF))
@@ -402,15 +433,26 @@ public class GenAbility extends StdAbility
 		}
 		else
 		{
+			List<String> targWords = commands;
+			if(nargs > 1)
+			{
+				targWords = new XVector<String>(commands.get(0));
+				if(commands.size()>nargs)
+				{
+					commands.set(nargs-1, CMParms.combine(commands,nargs-1));
+					while(commands.size()>nargs)
+						commands.remove(commands.size()-1);
+				}
+			}
 			switch(canTargetCode())
 			{
 			case Ability.CAN_MOBS:
-				target=super.getTarget(mob, commands, givenTarget);
+				target=super.getTarget(mob, targWords, givenTarget);
 				if(target==null)
 					return false;
 				break;
 			case Ability.CAN_ITEMS:
-				target=super.getTarget(mob, mob.location(), givenTarget, commands, Wearable.FILTER_ANY);
+				target=super.getTarget(mob, mob.location(), givenTarget, targWords, Wearable.FILTER_ANY);
 				if(target==null)
 					return false;
 				break;
@@ -426,7 +468,7 @@ public class GenAbility extends StdAbility
 				break;
 			case Ability.CAN_EXITS:
 			{
-				final String whatToOpen=CMParms.combine(commands,0);
+				final String whatToOpen=CMParms.combine(targWords,0);
 				Environmental openThis=null;
 				final int dirCode=CMLib.directions().getGoodDirectionCode(whatToOpen);
 				if(dirCode>=0)
@@ -440,7 +482,7 @@ public class GenAbility extends StdAbility
 			case 0:
 				break;
 			default:
-				target=super.getAnyTarget(mob,commands, givenTarget, Wearable.FILTER_ANY);
+				target=super.getAnyTarget(mob,targWords, givenTarget, Wearable.FILTER_ANY);
 				if(target==null)
 					return false;
 				break;
@@ -451,7 +493,10 @@ public class GenAbility extends StdAbility
 		&&(((String)V(ID,V_TMSK)).length()>0)
 		&&(!CMLib.masking().maskCheck((String)V(ID,V_TMSK), target,true)))
 		{
-			mob.tell(L("The target is invalid: @x1",CMLib.masking().maskDesc((String)V(ID,V_TMSK))));
+			if(((String)V(ID,V_TMSF)).length()>0)
+				mob.tell(mob,target,null,(String)V(ID,V_TMSF));
+			else
+				mob.tell(L("The target is invalid: @x1",CMLib.masking().maskDesc((String)V(ID,V_TMSK))));
 			return false;
 		}
 
@@ -576,16 +621,29 @@ public class GenAbility extends StdAbility
 					mob.location().send(mob, msg2);
 					this.executeMsg(mob, msg2);
 				}
+				final double[] dvars = new double[] {
+					mob.phyStats().level(),
+					(target==null)?0:target.phyStats().level(),
+					super.getXLEVELLevel(mob),
+					super.getX1Level(mob),
+					super.getX2Level(mob),
+					super.getX3Level(mob),
+					super.getX4Level(mob),
+					super.getX5Level(mob),
+					adjustedLevel(mob,asLevel)
+				};
+				final int tickOverride = CMath.parseIntExpression((String)V(ID, V_TKOV), dvars);
 				if((msg.value()<=0)&&((msg2==null)||(msg2.value()<=0)))
 				{
 					if((canAffectCode()!=0)&&(target!=null))
 					{
-						this.quietEffect=null;
+						this.quietEffect = null;
+						prepHereAffect(mob, target, asLevel);
 						final GenAbility affectA;
 						if(abstractQuality()==Ability.QUALITY_MALICIOUS)
-							affectA=(GenAbility)maliciousAffect(mob,target,asLevel,tickOverride(),-1);
+							affectA=(GenAbility)maliciousAffect(mob,target,asLevel,tickOverride,-1);
 						else
-							affectA=(GenAbility)beneficialAffect(mob,target,asLevel,tickOverride());
+							affectA=(GenAbility)beneficialAffect(mob,target,asLevel,tickOverride);
 						success[0]=affectA!=null;
 						if(success[0])
 						{
@@ -599,7 +657,12 @@ public class GenAbility extends StdAbility
 									if(A!=null)
 									{
 										A.setAffectedOne(affectA.affecting());
-										A.setMiscText((String)V(ID,V_MOKT));
+										final String miscText=
+											CMStrings.replaceVariables((String)V(ID,V_MOKT), commands.toArray(new String[commands.size()]));
+										A.setMiscText(miscText);
+										A.makeLongLasting();
+										A.setSavable(false);
+										A.setProficiency(100);
 										affectA.quietEffect=A;
 									}
 								}
@@ -635,11 +698,15 @@ public class GenAbility extends StdAbility
 												if(x<0)
 													A.setMiscText("");
 												else
-													A.setMiscText(t.substring(x+1));
+												{
+													final String miscText=
+															CMStrings.replaceVariables(t.substring(x+1), commands.toArray(new String[commands.size()]));
+													A.setMiscText(miscText);
+												}
 											}
 											final int tickDown=(abstractQuality()==Ability.QUALITY_MALICIOUS)?
-													getMaliciousTickdownTime(mob,target,tickOverride(),asLevel):
-													getBeneficialTickdownTime(mob,target,tickOverride(),asLevel);
+													getMaliciousTickdownTime(mob,target,tickOverride,asLevel):
+													getBeneficialTickdownTime(mob,target,tickOverride,asLevel);
 											A.startTickDown(mob,target,tickDown);
 										}
 									}
@@ -652,7 +719,7 @@ public class GenAbility extends StdAbility
 				final Physical finalTarget = target;
 				final MOB finalTargetMOB = (finalTarget instanceof MOB) ? (MOB) finalTarget : mob;
 				final int finalCastCode = castCode;
-				final Ability me = this;
+				final GenAbility me = this;
 				final Runnable skillAction = new Runnable()
 				{
 					@Override
@@ -666,7 +733,14 @@ public class GenAbility extends StdAbility
 								new double[]
 								{
 									mob.phyStats().level(),
-									(finalTarget==null)?mob.phyStats().level():finalTarget.phyStats().level()
+									((finalTarget==null)?mob.phyStats().level():finalTarget.phyStats().level()),
+									me.getXLEVELLevel(mob),
+									me.getX1Level(mob),
+									me.getX2Level(mob),
+									me.getX3Level(mob),
+									me.getX4Level(mob),
+									me.getX5Level(mob),
+									adjustedLevel(mob,asLevel)
 								});
 						}
 						if(((msg.value()<=0)&&((msg2==null)||(msg2.value()<=0)))
@@ -710,20 +784,25 @@ public class GenAbility extends StdAbility
 							{
 								CMLib.combat().postHealing(mob,finalTargetMOB,me,-dmg,CMMsg.MASK_ALWAYS|((OTH.intValue()<=0)?finalCastCode:OTH.intValue()),null);
 							}
-							if(CMLib.flags().isInTheGame(mob,true)&&((finalTarget==null)||CMLib.flags().isInTheGame((MOB)finalTarget,true)))
+							if(CMLib.flags().isInTheGame(mob,true)
+							&&((canTargetCode()==0)
+								||((finalTarget != null)
+								&&((!(finalTarget instanceof MOB))||CMLib.flags().isInTheGame((MOB)finalTarget,true)))))
 							{
 								final ScriptingEngine S=getScripter();
 								if((success[0])&&(S!=null))
 								{
 									final CMMsg msg3=CMClass.getMsg(mob,finalTarget,me,CMMsg.MSG_OK_VISUAL,null,null,ID);
+									final Object[] args = commands.toArray(new Object[12]);
 									S.executeMsg(mob, msg3);
-									S.dequeResponses();
+									S.dequeResponses(args);
 								}
 								mob.location().recoverRoomStats();
 							}
 						}
 						if(((msg.value()<=0)&&((msg2==null)||(msg2.value()<=0)))
-						&&(CMLib.flags().isInTheGame(mob,true)&&((finalTarget==null)||CMLib.flags().isInTheGame(finalTarget,true))))
+						&&(CMLib.flags().isInTheGame(mob,true)
+						&&((finalTarget==null)||CMLib.flags().isInTheGame(finalTarget,true))))
 						{
 							final String afterCast=(String)V(ID,V_PABL);
 							if(afterCast.length()>0)
@@ -749,7 +828,10 @@ public class GenAbility extends StdAbility
 				};
 				this.periodicEffect=null;
 				skillAction.run();
-				if((canAffectCode()!=0)&&(finalTarget!=null)&&(!finalTargetMOB.amDead())&&(CMLib.flags().isInTheGame(finalTarget, true)))
+				if((canAffectCode()!=0)
+				&&(finalTarget!=null)
+				&&(!finalTargetMOB.amDead())
+				&&(CMLib.flags().isInTheGame(finalTarget, true)))
 				{
 					Ability A=finalTarget.fetchEffect(ID());
 					if((!(A instanceof GenAbility))||(A.invoker()!=mob))
@@ -808,7 +890,7 @@ public class GenAbility extends StdAbility
 	@Override
 	public void affectPhyStats(final Physical affectedEnv, final PhyStats affectableStats)
 	{
-		final Ability A=(Ability)V(ID,V_HERE);
+		final Ability A=getHereAffect();
 		if(A!=null)
 			A.affectPhyStats(affectedEnv,affectableStats);
 		if(isChannelingSkill())
@@ -821,7 +903,7 @@ public class GenAbility extends StdAbility
 	@Override
 	public void affectCharStats(final MOB affectedMob, final CharStats affectableStats)
 	{
-		final Ability A=(Ability)V(ID,V_HERE);
+		final Ability A=getHereAffect();
 		if(A!=null)
 			A.affectCharStats(affectedMob,affectableStats);
 		final Ability A2=this.getQuietAffect();
@@ -832,7 +914,7 @@ public class GenAbility extends StdAbility
 	@Override
 	public void affectCharState(final MOB affectedMob, final CharState affectableMaxState)
 	{
-		final Ability A=(Ability)V(ID,V_HERE);
+		final Ability A=getHereAffect();
 		if(A!=null)
 			A.affectCharState(affectedMob,affectableMaxState);
 		final Ability A2=this.getQuietAffect();
@@ -884,7 +966,7 @@ public class GenAbility extends StdAbility
 				{
 					final CMMsg msg3=CMClass.getMsg(invoker(),aff,this,CMMsg.MSG_OK_VISUAL,null,null,"UNINVOKE-"+ID);
 					S.executeMsg(aff, msg3);
-					S.dequeResponses();
+					S.dequeResponses(null);
 				}
 			}
 			final String uninMsg = (String)V(ID,V_UNIN);
@@ -927,9 +1009,48 @@ public class GenAbility extends StdAbility
 			if(!S.tick(ticking,tickID))
 				return false;
 		}
+		final Ability qA=getQuietAffect();
+		if(qA!=null)
+		{
+			qA.tick(ticking, tickID);
+		}
 		if(this.periodicEffect!=null)
 			this.periodicEffect.run();
 		return true;
+	}
+
+	@Override
+	public boolean autoInvocation(final MOB mob, final boolean force)
+	{
+		if(super.autoInvocation(mob, force))
+		{
+			final GenAbility affectA=(GenAbility)mob.fetchEffect(ID());
+			if(affectA!=null)
+			{
+				final String hereParms=(String)V(ID,V_HERE);
+				if((hereParms!=null)&&(hereParms.length()>0))
+					affectA.prepHereAffect(mob, mob, 0);
+				final String SID=(String)V(ID,V_MOCK);
+				if(SID.length()>0)
+				{
+					final Ability A=CMClass.getAbility(SID);
+					if(A!=null)
+					{
+						A.setAffectedOne(affectA.affecting());
+						A.setMiscText((String)V(ID,V_MOKT));
+						A.makeLongLasting();
+						A.setSavable(false);
+						A.setProficiency(100);
+						affectA.quietEffect=A;
+					}
+				}
+				mob.recoverCharStats();
+				mob.recoverMaxState();
+				mob.recoverPhyStats();
+			}
+			return true;
+		}
+		return false;
 	}
 
 	// lots of work to be done here
@@ -968,12 +1089,14 @@ public class GenAbility extends StdAbility
 										 "POSTCASTDAMAGE",//26I
 										 "HELP",//27I
 										 "TICKSBETWEENCASTS",//28I
-										 "TICKSOVERRIDE",//29I
+										 "TICKSOVERRIDE",//29S
 										 "TICKAFFECTS", //30B
 										 "CHANNELING", //31B
 										 "UNINVOKEMSG", //32S
 										 "MOCKABILITY", //33A
 										 "MOCKABLETEXT", //34S
+										 "TARGETFAILMSG", //35S
+										 "NUMARGS"//36I
 										};
 
 	@Override
@@ -1015,7 +1138,7 @@ public class GenAbility extends StdAbility
 		case 7:
 			return ((Boolean) V(ID, V_AUTO)).toString();
 		case 8:
-			return convert(Ability.FLAG_DESCS, ((Integer) V(ID, V_FLAG)).intValue(), true);
+			return convert(Ability.FLAG_DESCS, ((Long) V(ID, V_FLAG)).longValue(), true);
 		case 9:
 			return convertClassAndDomain(((Integer) V(ID, V_CLAS)).intValue());
 		case 10:
@@ -1029,7 +1152,7 @@ public class GenAbility extends StdAbility
 		case 14:
 			return convert(Ability.QUALITY_DESCS, ((Integer) V(ID, V_QUAL)).intValue(), false);
 		case 15:
-			return ((Ability) V(ID, V_HERE)).text();
+			return ((String) V(ID, V_HERE));
 		case 16:
 			return (String) V(ID, V_CMSK);
 		case 17:
@@ -1057,7 +1180,7 @@ public class GenAbility extends StdAbility
 		case 28:
 			return ((Integer) V(ID, V_TKBC)).toString();
 		case 29:
-			return ((Integer) V(ID, V_TKOV)).toString();
+			return ((String) V(ID, V_TKOV)).toString();
 		case 30:
 			return ((Boolean) V(ID, V_TKAF)).toString();
 		case 31:
@@ -1068,6 +1191,10 @@ public class GenAbility extends StdAbility
 			return (String) V(ID,V_MOCK);
 		case 34:
 			return (String) V(ID,V_MOKT);
+		case 35:
+			return (String) V(ID, V_TMSF);
+		case 36:
+			return ((Integer) V(ID, V_NARG)).toString();
 		default:
 			if (code.equalsIgnoreCase("javaclass"))
 				return "GenAbility";
@@ -1122,16 +1249,16 @@ public class GenAbility extends StdAbility
 			SV(ID, V_TRIG, CMParms.toStringArray(CMParms.parseCommas(val.toUpperCase(), true)));
 			break;
 		case 5:
-			SV(ID, V_MAXR, Integer.valueOf(convert(Ability.RANGE_CHOICES, val, false)));
+			SV(ID, V_MAXR, Integer.valueOf((int)convert(Ability.RANGE_CHOICES, val, false)));
 			break;
 		case 6:
-			SV(ID, V_MINR, Integer.valueOf(convert(Ability.RANGE_CHOICES, val, false)));
+			SV(ID, V_MINR, Integer.valueOf((int)convert(Ability.RANGE_CHOICES, val, false)));
 			break;
 		case 7:
 			SV(ID, V_AUTO, Boolean.valueOf(CMath.s_bool(val)));
 			break;
 		case 8:
-			SV(ID, V_FLAG, Integer.valueOf(convert(Ability.FLAG_DESCS, val, true)));
+			SV(ID, V_FLAG, Long.valueOf(convert(Ability.FLAG_DESCS, val, true)));
 			break;
 		case 9:
 			SV(ID, V_CLAS, Integer.valueOf(convertClassAndDomain(val)));
@@ -1141,19 +1268,19 @@ public class GenAbility extends StdAbility
 			getHardOverrideManaCache().remove(ID());
 			break;
 		case 11:
-			SV(ID, V_USAG, Integer.valueOf(convert(Ability.USAGE_DESCS, val, true)));
+			SV(ID, V_USAG, Integer.valueOf((int)convert(Ability.USAGE_DESCS, val, true)));
 			break;
 		case 12:
-			SV(ID, V_CAFF, Integer.valueOf(convert(Ability.CAN_DESCS, val, true)));
+			SV(ID, V_CAFF, Integer.valueOf((int)convert(Ability.CAN_DESCS, val, true)));
 			break;
 		case 13:
-			SV(ID, V_CTAR, Integer.valueOf(convert(Ability.CAN_DESCS, val, true)));
+			SV(ID, V_CTAR, Integer.valueOf((int)convert(Ability.CAN_DESCS, val, true)));
 			break;
 		case 14:
-			SV(ID, V_QUAL, Integer.valueOf(convert(Ability.QUALITY_DESCS, val, false)));
+			SV(ID, V_QUAL, Integer.valueOf((int)convert(Ability.QUALITY_DESCS, val, false)));
 			break;
 		case 15:
-			((Ability) V(ID, V_HERE)).setMiscText(val);
+			SV(ID, V_HERE, val);
 			break;
 		case 16:
 			SV(ID, V_CMSK, val);
@@ -1177,7 +1304,7 @@ public class GenAbility extends StdAbility
 			SV(ID, V_PCST, val);
 			break;
 		case 23:
-			SV(ID, V_ATT2, Integer.valueOf(convert(CMMsg.TYPE_DESCS, val, false)));
+			SV(ID, V_ATT2, Integer.valueOf((int)convert(CMMsg.TYPE_DESCS, val, false)));
 			break;
 		case 24:
 			SV(ID, V_PAFF, val);
@@ -1195,7 +1322,7 @@ public class GenAbility extends StdAbility
 			SV(ID, V_TKBC, Integer.valueOf(CMath.s_int(val)));
 			break;
 		case 29:
-			SV(ID, V_TKOV, Integer.valueOf(CMath.s_int(val)));
+			SV(ID, V_TKOV, val.trim());
 			break;
 		case 30:
 			SV(ID, V_TKAF, Boolean.valueOf(CMath.s_bool(val)));
@@ -1212,6 +1339,12 @@ public class GenAbility extends StdAbility
 		case 34:
 			SV(ID, V_MOKT, val);
 			break;
+		case 35:
+			SV(ID, V_TMSF, val);
+			break;
+		case 36:
+			SV(ID, V_NARG, Integer.valueOf(CMath.s_int(val)));
+			break;
 		default:
 			if (code.equalsIgnoreCase("allxml") && ID.equalsIgnoreCase("GenAbility"))
 				parseAllXML(val);
@@ -1221,14 +1354,14 @@ public class GenAbility extends StdAbility
 		}
 	}
 
-	private String convert(final String[] options, final int val, final boolean mask)
+	private String convert(final String[] options, final long val, final boolean mask)
 	{
 		if(mask)
 		{
 			final StringBuffer str=new StringBuffer("");
 			for(int i=0;i<options.length;i++)
 			{
-				if((val&(1<<i))>0)
+				if((val&(1L<<i))>0)
 					str.append(options[i]+",");
 			}
 			if(str.length()>0)
@@ -1241,7 +1374,7 @@ public class GenAbility extends StdAbility
 		}
 		else
 		if((val>=0)&&(val<options.length))
-			return options[val];
+			return options[(int)val];
 		return ""+val;
 	}
 
@@ -1256,32 +1389,32 @@ public class GenAbility extends StdAbility
 		{
 			val=V.get(v);
 			int tacod=-1;
-			for(int a=0;a<Ability.ACODE_DESCS.length;a++)
+			for(int a=0;a<Ability.ACODE.DESCS.size();a++)
 			{
-				if(val.equalsIgnoreCase(Ability.ACODE_DESCS[a]))
+				if(val.equalsIgnoreCase(Ability.ACODE.DESCS.get(a)))
 					tacod=a;
 			}
 			if(tacod<0)
 			{
-				for(int i=0;i<Ability.ACODE_DESCS.length;i++)
+				for(int i=0;i<Ability.ACODE.DESCS.size();i++)
 				{
-					if(Ability.ACODE_DESCS[i].toUpperCase().startsWith(val.toUpperCase()))
+					if(Ability.ACODE.DESCS.get(i).toUpperCase().startsWith(val.toUpperCase()))
 						tacod=i;
 				}
 				if(tacod<0)
 				{
 					int tdom=-1;
-					for(int a=0;a<Ability.DOMAIN_DESCS.length;a++)
+					for(int a=0;a<Ability.DOMAIN.DESCS.size();a++)
 					{
-						if(val.equalsIgnoreCase(Ability.DOMAIN_DESCS[a]))
+						if(val.equalsIgnoreCase(Ability.DOMAIN.DESCS.get(a)))
 							tdom=a<<5;
 					}
 					if(tdom<0)
 					{
-						for(int i=0;i<Ability.DOMAIN_DESCS.length;i++)
+						for(int i=0;i<Ability.DOMAIN.DESCS.size();i++)
 						{
-							if(Ability.DOMAIN_DESCS[i].toUpperCase().startsWith(val.toUpperCase())
-									||Ability.DOMAIN_DESCS[i].toUpperCase().endsWith(val.toUpperCase()))
+							if(Ability.DOMAIN.DESCS.get(i).toUpperCase().startsWith(val.toUpperCase())
+									||Ability.DOMAIN.DESCS.get(i).toUpperCase().endsWith(val.toUpperCase()))
 							{
 								tdom = i << 5;
 								break;
@@ -1302,35 +1435,35 @@ public class GenAbility extends StdAbility
 	{
 		final int dom=(val&Ability.ALL_DOMAINS)>>5;
 		final int acod=val&Ability.ALL_ACODES;
-		if((acod>=0)&&(acod<Ability.ACODE_DESCS.length)
-		&&(dom>=0)&&(dom<Ability.DOMAIN_DESCS.length))
-			return Ability.ACODE_DESCS[acod]+","+Ability.DOMAIN_DESCS[dom];
+		if((acod>=0)&&(acod<Ability.ACODE.DESCS.size())
+		&&(dom>=0)&&(dom<Ability.DOMAIN.DESCS.size()))
+			return Ability.ACODE.DESCS.get(acod)+","+Ability.DOMAIN.DESCS.get(dom);
 		return ""+val;
 	}
 
-	private int convert(final String[] options, final String val, final boolean mask)
+	private long convert(final String[] options, final String val, final boolean mask)
 	{
-		if(CMath.isInteger(val))
-			return CMath.s_int(val);
+		if(CMath.isLong(val))
+			return CMath.s_long(val);
 		for(int i=0;i<options.length;i++)
 		{
 			if(val.equalsIgnoreCase(options[i]))
-				return mask?(1<<i):i;
+				return mask?(1L<<i):i;
 		}
 		if(val.length()>0)
 		{
 			for(int i=0;i<options.length;i++)
 			{
 				if(options[i].toUpperCase().startsWith(val.toUpperCase()))
-					return mask?(1<<i):i;
+					return mask?(1L<<i):i;
 			}
 		}
 		if(mask)
 		{
 			final List<String> V=CMParms.parseCommas(val,true);
-			int num=0;
+			long num=0;
 			for(int v=0;v<V.size();v++)
-				num=num|(1<<convert(options,V.get(v),false));
+				num=num|(1L<<convert(options,V.get(v),false));
 			return num;
 		}
 		return 0;
