@@ -11,6 +11,7 @@ import com.planet_ink.coffee_mud.Common.interfaces.*;
 import com.planet_ink.coffee_mud.Exits.interfaces.*;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.core.interfaces.CostDef.CostType;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
@@ -22,7 +23,7 @@ import java.util.Set;
 import java.util.TreeSet;
 
 /*
-   Copyright 2007-2020 Bo Zimmerman
+   Copyright 2007-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -108,6 +109,12 @@ public class QuestBound implements Ability
 	}
 
 	@Override
+	public int getTicksBetweenCasts()
+	{
+		return 0;
+	}
+
+	@Override
 	public void setAbilityCode(final int newCode)
 	{
 	}
@@ -127,8 +134,9 @@ public class QuestBound implements Ability
 	@Override
 	public long flags()
 	{
-		return 0;
+		return Ability.FLAG_NONENCHANTMENT;
 	}
+
 
 	@Override
 	public int getTickStatus()
@@ -148,15 +156,15 @@ public class QuestBound implements Ability
 	}
 
 	@Override
-	public ExpertiseLibrary.SkillCost getTrainingCost(final MOB mob)
+	public CostManager getTrainingCost(final MOB mob)
 	{
-		return CMLib.expertises().createNewSkillCost(ExpertiseLibrary.CostType.TRAIN, Double.valueOf(1.0));
+		return CMLib.utensils().createCostManager(CostType.TRAIN, Double.valueOf(1.0));
 	}
 
 	@Override
 	public String L(final String str, final String... xs)
 	{
-		return CMLib.lang().fullSessionTranslation(str, xs);
+		return CMLib.lang().fullSessionTranslation(getClass(), str, xs);
 	}
 
 	@Override
@@ -428,7 +436,7 @@ public class QuestBound implements Ability
 	{
 		try
 		{
-			return this.getClass().newInstance();
+			return this.getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
@@ -713,6 +721,12 @@ public class QuestBound implements Ability
 
 	@Override
 	public boolean isGeneric()
+	{
+		return false;
+	}
+
+	@Override
+	public boolean mayBeEnchanted()
 	{
 		return false;
 	}
