@@ -16,6 +16,7 @@ import com.planet_ink.coffee_mud.Common.interfaces.*;
 import com.planet_ink.coffee_mud.Exits.interfaces.*;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.AbilityMapper.SecretFlag;
 import com.planet_ink.coffee_mud.Libraries.interfaces.XMLLibrary.XMLTag;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
@@ -26,7 +27,7 @@ import java.util.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
 
 /*
-   Copyright 2004-2020 Bo Zimmerman
+   Copyright 2004-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -206,7 +207,7 @@ public class GenCharClass extends StdCharClass
 	}
 
 	@Override
-	public int addedExpertise(final MOB host, final ExpertiseLibrary.Flag expertiseCode, final String abilityID)
+	public int addedExpertise(final MOB host, final ExpertiseLibrary.XType expertiseCode, final String abilityID)
 	{
 		return 0;
 	}
@@ -379,7 +380,7 @@ public class GenCharClass extends StdCharClass
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
@@ -457,7 +458,7 @@ public class GenCharClass extends StdCharClass
 			affectableStats.setHeight(affectableStats.height()+adjPStats.height());
 			affectableStats.setLevel(affectableStats.level()+adjPStats.level());
 			affectableStats.setSensesMask(affectableStats.sensesMask()|adjPStats.sensesMask());
-			affectableStats.setSpeed(affectableStats.speed()+adjPStats.speed());
+			affectableStats.setSpeed(affectableStats.speed()+(CMProps.getSpeedAdjustment()*adjPStats.speed()));
 			affectableStats.setWeight(affectableStats.weight()+adjPStats.weight());
 		}
 		if(statBuddy!=null)
@@ -607,7 +608,7 @@ public class GenCharClass extends StdCharClass
 				str.append("<CALEVEL>"+ables.elementAt(r).qualLevel()+"</CALEVEL>");
 				str.append("<CAPROFF>"+ables.elementAt(r).defaultProficiency()+"</CAPROFF>");
 				str.append("<CAAGAIN>"+ables.elementAt(r).autoGain()+"</CAAGAIN>");
-				str.append("<CASECR>"+ables.elementAt(r).isSecret()+"</CASECR>");
+				str.append("<CASECR>"+ables.elementAt(r).secretFlag().name()+"</CASECR>");
 				str.append("<CAPARM>"+ables.elementAt(r).defaultParm()+"</CAPARM>");
 				str.append("<CAPREQ>"+ables.elementAt(r).originalSkillPreReqList()+"</CAPREQ>");
 				str.append("<CAMASK>"+ables.elementAt(r).extraMask()+"</CAMASK>");
@@ -860,6 +861,9 @@ public class GenCharClass extends StdCharClass
 				String maxProff=iblk.getValFromPieces("CAMAXP");
 				if((maxProff==null)||(maxProff.trim().length()==0))
 					maxProff="100";
+				SecretFlag secretFlag = (SecretFlag)CMath.s_valueOf(SecretFlag.class, iblk.getValFromPieces("CASECR"));
+				if(secretFlag == null)
+					secretFlag = iblk.getBoolFromPieces("CASECR")?SecretFlag.SECRET:SecretFlag.PUBLIC;
 				CMLib.ableMapper().addCharAbilityMapping(ID(),
 									 iblk.getIntFromPieces("CALEVEL"),
 									 iblk.getValFromPieces("CACLASS"),
@@ -867,7 +871,7 @@ public class GenCharClass extends StdCharClass
 									 CMath.s_int(maxProff),
 									 iblk.getValFromPieces("CAPARM"),
 									 iblk.getBoolFromPieces("CAAGAIN"),
-									 iblk.getBoolFromPieces("CASECR"),
+									 secretFlag,
 									 CMParms.parseCommas(iblk.getValFromPieces("CAPREQ"),true),
 									 iblk.getValFromPieces("CAMASK"),
 									 null);
@@ -971,7 +975,7 @@ public class GenCharClass extends StdCharClass
 			newMAP.qualLevel(CMLib.ableMapper().getQualifyingLevel(ID(),false,AID));
 			newMAP.defaultProficiency(CMLib.ableMapper().getDefaultProficiency(ID(),false,AID));
 			newMAP.autoGain(CMLib.ableMapper().getDefaultGain(ID(),false,AID));
-			newMAP.isSecret(CMLib.ableMapper().getSecretSkill(ID(),false,AID));
+			newMAP.secretFlag(CMLib.ableMapper().getSecretSkill(ID(),false,AID));
 			newMAP.defaultParm(CMLib.ableMapper().getDefaultParm(ID(),false,AID));
 			newMAP.originalSkillPreReqList(CMLib.ableMapper().getPreReqStrings(ID(),false,AID));
 			newMAP.extraMask(CMLib.ableMapper().getExtraMask(ID(),false,AID));
@@ -1071,7 +1075,7 @@ public class GenCharClass extends StdCharClass
 		case 28:
 			return Boolean.toString(getAbleSet().elementAt(num).autoGain());
 		case 29:
-			return Boolean.toString(getAbleSet().elementAt(num).isSecret());
+			return getAbleSet().elementAt(num).secretFlag().name();
 		case 30:
 			return getAbleSet().elementAt(num).defaultParm();
 		case 31:
@@ -1148,7 +1152,7 @@ public class GenCharClass extends StdCharClass
 		return "";
 	}
 
-	protected String[] tempables=new String[9];
+	protected String[] tempables=new String[10];
 
 	@SuppressWarnings("unchecked")
 	@Override
@@ -1267,6 +1271,10 @@ public class GenCharClass extends StdCharClass
 			CMLib.ableMapper().delCharMappings(ID());
 			break;
 		case 25:
+		{
+			SecretFlag secFlg = (SecretFlag)CMath.s_valueOf(SecretFlag.class, tempables[4]);
+			if(secFlg == null)
+				secFlg=CMath.s_bool(tempables[4])?SecretFlag.SECRET:SecretFlag.PUBLIC;
 			CMLib.ableMapper().addCharAbilityMapping(ID(),
 													 CMath.s_int(tempables[1]),
 													 val,
@@ -1274,11 +1282,12 @@ public class GenCharClass extends StdCharClass
 													 CMath.s_int(tempables[8]),
 													 tempables[5],
 													 CMath.s_bool(tempables[3]),
-													 CMath.s_bool(tempables[4]),
+													 secFlg,
 													 CMParms.parseCommas(tempables[6],true),
 													 tempables[7],
 													 null);
 			break;
+		}
 		case 26:
 			tempables[1] = val;
 			break;
@@ -1527,14 +1536,37 @@ public class GenCharClass extends StdCharClass
 	public void startCharacter(final MOB mob, final boolean isBorrowedClass, final boolean verifyOnly)
 	{
 		super.startCharacter(mob,isBorrowedClass,verifyOnly);
-		if((!verifyOnly)&&(startAdjState!=null))
+		if(!verifyOnly)
 		{
-			mob.baseState().setFatigue(mob.baseState().getFatigue()+startAdjState.getFatigue());
-			mob.baseState().setHitPoints(mob.baseState().getHitPoints()+startAdjState.getHitPoints());
-			mob.baseState().setHunger(mob.baseState().getHunger()+startAdjState.getHunger());
-			mob.baseState().setMana(mob.baseState().getMana()+startAdjState.getMana());
-			mob.baseState().setMovement(mob.baseState().getMovement()+startAdjState.getMovement());
-			mob.baseState().setThirst(mob.baseState().getThirst()+startAdjState.getThirst());
+			if(startAdjState!=null)
+			{
+				mob.baseState().setFatigue(mob.baseState().getFatigue()+startAdjState.getFatigue());
+				mob.baseState().setHitPoints(mob.baseState().getHitPoints()+startAdjState.getHitPoints());
+				mob.baseState().setHunger(mob.baseState().getHunger()+startAdjState.getHunger());
+				mob.baseState().setMana(mob.baseState().getMana()+startAdjState.getMana());
+				mob.baseState().setMovement(mob.baseState().getMovement()+startAdjState.getMovement());
+				mob.baseState().setThirst(mob.baseState().getThirst()+startAdjState.getThirst());
+			}
+			if(mob.playerStats()==null)
+			{
+				final List<AbilityMapper.AbilityMapping> V=CMLib.ableMapper().getUpToLevelListings(ID(),
+															mob.charStats().getClassLevel(ID()),
+															false,
+															false);
+				for(final AbilityMapper.AbilityMapping able : V)
+				{
+					final Ability A=CMClass.getAbility(able.abilityID());
+					if((A!=null)
+					&&(!CMLib.ableMapper().getAllQualified(ID(),true,A.ID()))
+					&&(!CMLib.ableMapper().getDefaultGain(ID(),true,A.ID())))
+					{
+						giveMobAbility(mob,A,
+								CMLib.ableMapper().getDefaultProficiency(ID(),true,A.ID()),
+								CMLib.ableMapper().getDefaultParm(ID(),true,A.ID()),
+								isBorrowedClass);
+					}
+				}
+			}
 		}
 	}
 
