@@ -17,7 +17,7 @@ import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
 
 /*
-   Copyright 2001-2020 Bo Zimmerman
+   Copyright 2001-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -47,6 +47,8 @@ public class DefaultCharState implements CharState
 
 	protected final static int[]	DEFAULT_STATES	= { 10, 100, 50, 500, 1000, 0, 0 };
 	protected int[]					states			= DEFAULT_STATES.clone();
+	protected float					hoverflow		= 0.0f;
+	protected float					toverflow		= 0.0f;
 	protected long					fatigue			= 0;
 
 	public DefaultCharState()
@@ -60,7 +62,7 @@ public class DefaultCharState implements CharState
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
@@ -168,6 +170,7 @@ public class DefaultCharState implements CharState
 		states[STAT_HUNGER]=newVal;
 		if(states[STAT_HUNGER]>0)
 			states[STAT_TICKSHUNGRY]=0;
+		hoverflow=0.0f;
 	}
 
 	@Override
@@ -179,18 +182,20 @@ public class DefaultCharState implements CharState
 	}
 
 	@Override
-	public boolean adjHunger(int byThisMuch, final int max)
+	public boolean adjHunger(double byThisMuch, final int max)
 	{
 		if(byThisMuch>0)
 		{
 			if(states[STAT_HUNGER]==Integer.MAX_VALUE)
 				return false;
-			byThisMuch=(int)Math.round(CMProps.getIntVarAsPct(CMProps.Int.HUNGER_GAIN_PCT)*byThisMuch);
+			byThisMuch*=CMProps.getIntVarAsPct(CMProps.Int.HUNGER_GAIN_PCT);
 		}
 		else
-			byThisMuch=(int)Math.round(CMProps.getIntVarAsPct(CMProps.Int.HUNGER_LOSS_PCT)*byThisMuch);
-
-		states[STAT_HUNGER]+=byThisMuch;
+			byThisMuch*=CMProps.getIntVarAsPct(CMProps.Int.HUNGER_LOSS_PCT);
+		byThisMuch += hoverflow;
+		final int intMuch = (int)Math.floor(byThisMuch);
+		hoverflow = (float)(byThisMuch-intMuch);
+		states[STAT_HUNGER]+=intMuch;
 		if(states[STAT_HUNGER]<0)
 		{
 			states[STAT_HUNGER]=0;
@@ -210,7 +215,7 @@ public class DefaultCharState implements CharState
 	public int maxHunger(final int baseWeight)
 	{
 		long factor=baseWeight/250;
-		if(factor==0)
+		if(factor<1)
 			factor=1;
 		factor*=getHunger();
 		if(factor>Integer.MAX_VALUE)
@@ -230,6 +235,7 @@ public class DefaultCharState implements CharState
 		states[STAT_THIRST]=newVal;
 		if(states[STAT_THIRST]>0)
 			states[STAT_TICKSTHIRSTY]=0;
+		toverflow=0.0f;
 	}
 
 	@Override
@@ -241,17 +247,20 @@ public class DefaultCharState implements CharState
 	}
 
 	@Override
-	public boolean adjThirst(int byThisMuch, final int max)
+	public boolean adjThirst(double byThisMuch, final int max)
 	{
 		if(byThisMuch>0)
 		{
 			if(states[STAT_THIRST]==Integer.MAX_VALUE)
 				return false;
-			byThisMuch=(int)Math.round(CMProps.getIntVarAsPct(CMProps.Int.THIRST_GAIN_PCT)*byThisMuch);
+			byThisMuch*=CMProps.getIntVarAsPct(CMProps.Int.THIRST_GAIN_PCT);
 		}
 		else
-			byThisMuch=(int)Math.round(CMProps.getIntVarAsPct(CMProps.Int.THIRST_LOSS_PCT)*byThisMuch);
-		states[STAT_THIRST]+=byThisMuch;
+			byThisMuch*=CMProps.getIntVarAsPct(CMProps.Int.THIRST_LOSS_PCT);
+		byThisMuch += toverflow;
+		final int intMuch = (int)Math.floor(byThisMuch);
+		toverflow = (float)byThisMuch-intMuch;
+		states[STAT_THIRST]+=intMuch;
 		if(states[STAT_THIRST]<0)
 		{
 			states[STAT_THIRST]=0;
@@ -271,7 +280,7 @@ public class DefaultCharState implements CharState
 	public int maxThirst(final int baseWeight)
 	{
 		long factor=baseWeight/250;
-		if(factor==0)
+		if(factor<1)
 			factor=1;
 		factor*=getThirst();
 		if(factor>Integer.MAX_VALUE)
@@ -341,6 +350,21 @@ public class DefaultCharState implements CharState
 			return false;
 		}
 		return true;
+	}
+
+	@Override
+	public int getStat(final int statNum)
+	{
+		if(statNum<CharState.STAT_NUMSTATS)
+			return states[statNum];
+		return 0;
+	}
+
+	@Override
+	public void setStat(final int statNum, final int value)
+	{
+		if(statNum<CharState.STAT_NUMSTATS)
+			states[statNum] = value;
 	}
 
 	private final static String[] CODES={
