@@ -13,9 +13,11 @@ import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
 import com.planet_ink.coffee_mud.Commands.interfaces.*;
 import com.planet_ink.coffee_mud.Common.interfaces.*;
 import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionFilter;
+import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionPing;
 import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionStatus;
 import com.planet_ink.coffee_mud.Exits.interfaces.*;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.Sessions;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
 import com.planet_ink.coffee_mud.Libraries.interfaces.CharCreationLibrary.LoginResult;
 import com.planet_ink.coffee_mud.Libraries.interfaces.CharCreationLibrary.LoginSession;
@@ -32,12 +34,18 @@ import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReentrantLock;
+
+import javax.crypto.Mac;
+import javax.crypto.spec.SecretKeySpec;
+
 import java.sql.*;
 import java.net.*;
+import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 
 /*
-   Copyright 2005-2020 Bo Zimmerman
+   Copyright 2005-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -57,6 +65,7 @@ public class DefaultSession implements Session
 	protected static final int		PINGTIMEOUT  	= 30000;
 	protected static final int		MSDPPINGINTERVAL= 1000;
 	protected static final char[]	PINGCHARS		= {0};
+	protected static final String	TIMEOUT_MSG		= "Timed Out.";
 
 	protected final Set<Integer>		telnetSupportSet= new HashSet<Integer>();
 	protected final Set<String>			mxpSupportSet	= new HashSet<String>();
@@ -65,21 +74,22 @@ public class DefaultSession implements Session
 	protected final Map<String, Double> gmcpSupports	= new TreeMap<String,Double>();
 	protected final Map<String, Long> 	gmcpPings		= new TreeMap<String,Long>();
 
+	protected final Map<String,String>	strCache		= new TreeMap<String,String>();
 	protected final String[]			mcpKey			= new String[1];
 	protected final Map<String,String>	mcpKeyPairs		= new TreeMap<String,String>();
 	protected final boolean		 		mcpDisabled		= CMSecurity.isDisabled(DisFlag.MCP);
 	protected final Map<String,float[]>	mcpSupported	= new TreeMap<String,float[]>();
 	protected final AtomicBoolean 		sockObj 		= new AtomicBoolean(false);
-
-	private static final String		TIMEOUT_MSG		= "Timed Out.";
+	protected final LinkedList<List<String>>history		= new LinkedList<List<String>>();
 
 	private volatile Thread  runThread 			 = null;
 	private volatile Thread	 writeThread 		 = null;
 	protected String		 groupName			 = null;
 	protected SessionStatus  status 			 = SessionStatus.HANDSHAKE_OPEN;
-	protected long 			 lastStateChangeMs	 = System.currentTimeMillis();
+	protected volatile long  lastStateChangeMs	 = System.currentTimeMillis();
 	protected int   		 snoopSuspensionStack= 0;
 	protected Socket 	 	 sock				 = null;
+	protected String		 ipAddress			 = "Unknown";
 	protected SesInputStream charWriter;
 	protected int			 inMaxBytesPerChar	 = 1;
 	protected BufferedReader in;
@@ -90,12 +100,11 @@ public class DefaultSession implements Session
 	protected PlayerAccount  acct				 = null;
 	protected boolean   	 killFlag			 = false;
 	protected boolean   	 needPrompt			 = false;
-	protected boolean   	 afkFlag			 = false;
+	protected long		 	 afkTime			 = 0;
 	protected String		 afkMessage			 = null;
 	protected StringBuffer   input				 = new StringBuffer("");
 	protected StringBuffer   fakeInput			 = null;
 	protected boolean   	 waiting			 = false;
-	protected List<String>   previousCmd		 = new Vector<String>();
 	protected String[]  	 clookup			 = null;
 	protected String		 lastColorStr		 = "";
 	protected String		 lastStr			 = null;
@@ -108,6 +117,8 @@ public class DefaultSession implements Session
 	protected boolean		 suspendCommandLine	 = false;
 	protected boolean[] 	 serverTelnetCodes	 = new boolean[256];
 	protected boolean[]		 clientTelnetCodes	 = new boolean[256];
+	protected String		 lastTTypeR			 = "";
+	protected Long			 mttsBitmap			 = null;
 	protected String		 terminalType		 = "UNKNOWN";
 	protected int			 terminalWidth		 = -1;
 	protected int			 terminalHeight		 = -1;
@@ -117,6 +128,7 @@ public class DefaultSession implements Session
 	protected ReentrantLock  writeLock 			 = new ReentrantLock(true);
 	protected LoginSession	 loginSession 		 = null;
 	protected boolean[]		 loggingOutObj		 = new boolean[]{false};
+	protected boolean		 reverseEcho		 = false;
 
 	protected byte[]		 promptSuffix		 = new byte[0];
 	protected ColorState	 currentColor		 = null;
@@ -134,16 +146,19 @@ public class DefaultSession implements Session
 	protected long			 milliTotal			 = 0;
 	protected long			 tickTotal			 = 0;
 	protected long			 lastKeystroke		 = 0;
-	protected long			 lastIACIn		 	 = System.currentTimeMillis();
+	protected volatile long	 lastIACIn		 	 = System.currentTimeMillis();
 	protected long			 promptLastShown	 = 0;
 	protected char 			 threadGroupChar	 = '\0';
 	protected volatile long  lastWriteTime		 = System.currentTimeMillis();
-	protected boolean		 debugStrInput		 = true;
+	protected boolean		 debugStrInput		 = false;
+	protected boolean		 debugStrOutput		 = false;
 	protected boolean		 debugBinOutput		 = false;
 	protected boolean		 debugBinInput		 = false;
 	protected StringBuffer   debugBinInputBuf	 = new StringBuffer("");
 
-	protected List<SessionFilter>		textFilters		= new Vector<SessionFilter>(3);
+	protected final Stack<ColorState>	markedColors	= new Stack<ColorState>();
+	protected AtomicBoolean				lastWasPrompt	= new AtomicBoolean(false);
+	protected List<SessionFilter>		textFilters		= new SVector<SessionFilter>(3);
 	protected volatile InputCallback	inputCallback	= null;
 
 	@Override
@@ -163,7 +178,7 @@ public class DefaultSession implements Session
 	{
 		try
 		{
-			return getClass().newInstance();
+			return getClass().getDeclaredConstructor().newInstance();
 		}
 		catch (final Exception e)
 		{
@@ -254,6 +269,161 @@ public class DefaultSession implements Session
 		return false;
 	}
 
+	private class HandshakeCallback extends TickingCallback
+	{
+		private final String introTextStr;
+		private final long firstIACIn=lastIACIn;
+
+		public HandshakeCallback(final long tickTime, final String introText)
+		{
+			super(tickTime);
+			this.introTextStr=introText;
+		}
+		@Override
+		public boolean tick(final int counter)
+		{
+			try
+			{
+				if(out!=null)
+				{
+					out.flush();
+					rawout.flush();
+				}
+				else
+				{
+					killFlag=true;
+					return false;
+				}
+				switch(status)
+				{
+				case HANDSHAKE_OPEN:
+				{
+					//rawout.flush(); rawBytesOut already flushes
+					setStatus(SessionStatus.HANDSHAKE_MCCP);
+					break;
+				}
+				case HANDSHAKE_MCCP:
+				{
+					if(((lastIACIn>firstIACIn)&&((System.currentTimeMillis()-lastIACIn)>500))
+					||((System.currentTimeMillis()-lastIACIn)>5000)
+					||((System.currentTimeMillis()-lastStateChangeMs)>10000))
+					{
+						if(getClientTelnetMode(TELNET_COMPRESS2))
+						{
+							negotiateTelnetMode(rawout,TELNET_COMPRESS2);
+							//rawout.flush(); rawBytesOut already flushes
+							if(getClientTelnetMode(TELNET_COMPRESS2))
+								startMCCP2();
+						}
+						setStatus(SessionStatus.HANDSHAKE_MXP);
+					}
+					break;
+				}
+				case HANDSHAKE_MXP:
+				{
+					if(!getClientTelnetMode(Session.TELNET_MXP))
+						setStatus(SessionStatus.HANDSHAKE_DONE);
+					else
+					{
+						rawOut("\n\033[6z\n\033[6z<SUPPORT IMAGE IMAGE.URL>\n");
+						rawout.flush();
+						rawOut("\n\033[6z\n\033[6z<SUPPORT>\n");
+						rawout.flush();
+						setStatus(SessionStatus.HANDSHAKE_MXPPAUSE);
+					}
+					break;
+				}
+				case HANDSHAKE_MXPPAUSE:
+				{
+					if(((System.currentTimeMillis()-lastStateChangeMs)>3000)
+					||(mxpSupportSet.contains("+IMAGE.URL")||mxpSupportSet.contains("+IMAGE")||mxpSupportSet.contains("-IMAGE.URL")))
+						setStatus(SessionStatus.HANDSHAKE_DONE);
+					break;
+				}
+				case HANDSHAKE_DONE:
+				{
+					if(introTextStr!=null)
+						print(introTextStr);
+					if(out!=null)
+					{
+						out.flush();
+						rawout.flush();
+						if((getClientTelnetMode(Session.TELNET_MXP))
+						&&((mxpSupportSet.contains("+IMAGE.URL"))
+							||((mxpSupportSet.contains("+IMAGE"))&&(!mxpSupportSet.contains("-IMAGE.URL")))))
+						{
+							// also the intro page
+							final String[] paths=CMLib.protocol().mxpImagePath("intro.jpg");
+							if(paths[0].length()>0)
+							{
+								final CMFile introDir=new CMFile("/web/pub/images/mxp",null,CMFile.FLAG_FORCEALLOW);
+								String introFilename=paths[1];
+								if(introDir.isDirectory())
+								{
+									final CMFile[] files=introDir.listFiles();
+									final List<String> choices=new ArrayList<String>();
+									for (final CMFile file : files)
+									{
+										if(file.getName().toLowerCase().startsWith("intro")
+										&&file.getName().toLowerCase().endsWith(".jpg"))
+											choices.add(file.getName());
+									}
+									if(choices.size()>0)
+										introFilename=choices.get(CMLib.dice().roll(1,choices.size(),-1));
+								}
+								println("\n\r\n\r\n\r^<IMAGE '"+introFilename+"' URL='"+paths[0]+"' H=400 W=400^>\n\r\n\r");
+								if(out!=null)
+								{
+									out.flush();
+									rawout.flush();
+								}
+							}
+						}
+					}
+				}
+					//$FALL-THROUGH$
+				default:
+					connectionComplete=true;
+					status=SessionStatus.LOGIN;
+					if(collectedInput.length()>0)
+						fakeInput=new StringBuffer(collectedInput.toString());
+					return false;
+				}
+				return (out!=null);
+			}
+			catch(final Exception e)
+			{
+				if(e.getMessage()==null)
+					Log.errOut(e);
+				else
+					Log.errOut(e.getMessage());
+			}
+			connectionComplete=true;
+			status=SessionStatus.LOGIN;
+			return false;
+		}
+	}
+
+	private void startMCCP2() throws IOException
+	{
+		if(getClientTelnetMode(TELNET_COMPRESS2))
+		{
+			final ZOutputStream zOut=new ZOutputStream(rawout, JZlib.Z_DEFAULT_COMPRESSION);
+			rawout=zOut;
+			zOut.setFlushMode(JZlib.Z_SYNC_FLUSH);
+			try
+			{
+				out = new PrintWriter(new OutputStreamWriter(zOut,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
+			}
+			catch (final UnsupportedEncodingException e)
+			{
+				Log.errOut(e);
+			}
+			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
+				Log.debugOut("MCCP compression started");
+		}
+	}
+
 	@Override
 	public void initializeSession(final Socket s, final String groupName, final String introTextStr)
 	{
@@ -262,69 +432,11 @@ public class DefaultSession implements Session
 		promptSuffix = CMProps.getPromptSuffix();
 		currentColor = CMLib.color().getNormalColor();
 		lastColor = CMLib.color().getNormalColor();
+		markedColors.clear();
 		try
 		{
 			setStatus(SessionStatus.HANDSHAKE_OPEN);
-			debugStrInput = CMSecurity.isDebugging(CMSecurity.DbgFlag.INPUT);
-			debugBinOutput = CMSecurity.isDebugging(CMSecurity.DbgFlag.BINOUT);
-			debugBinInput = CMSecurity.isDebugging(CMSecurity.DbgFlag.BININ);
-			if(debugBinInput)
-			{
-				CMLib.threads().startTickDown(new Tickable()
-				{
-					@Override
-					public String ID()
-					{
-						return "SessionTicker";
-					}
-
-					@Override
-					public CMObject newInstance()
-					{
-						return null;
-					}
-
-					@Override
-					public CMObject copyOf()
-					{
-						return null;
-					}
-
-					@Override
-					public void initializeClass()
-					{
-					}
-
-					@Override
-					public int compareTo(final CMObject o)
-					{
-						return 0;
-					}
-
-					@Override
-					public String name()
-					{
-						return ID();
-					}
-
-					@Override
-					public int getTickStatus()
-					{
-						return 0;
-					}
-
-					@Override
-					public boolean tick(final Tickable ticking, final int tickID)
-					{
-						if(debugBinInputBuf.length()>0)
-						{
-							Log.sysOut("BINPUT: "+(mob==null?"":mob.Name())+": '"+debugBinInputBuf.toString()+"'");
-							debugBinInputBuf.setLength(0);
-						}
-						return !killFlag;
-					}
-				}, 0, 1, 1);
-			}
+			initializeDebugSession();
 
 			if((sock == null)||(!sock.isConnected()))
 			{
@@ -335,183 +447,55 @@ public class DefaultSession implements Session
 				return;
 			}
 
+			this.ipAddress = sock.getInetAddress().getHostAddress();
 			sock.setSoTimeout(SOTIMEOUT);
 			rawout=new BufferedOutputStream(sock.getOutputStream());
 			rawin=new BufferedInputStream(sock.getInputStream());
-			if(!mcpDisabled)
-			{
-				rawBytesOut(rawout,("\n\r#$#mcp version: 2.1 to: 2.1\n\r").getBytes(CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
-			}
-			rawBytesOut(rawout,("\n\rConnecting to "+CMProps.getVar(CMProps.Str.MUDNAME)+"...\n\r").getBytes("US-ASCII"));
-			rawout.flush();
-
-			setServerTelnetMode(TELNET_ANSI,true);
-			setClientTelnetMode(TELNET_ANSI,true);
-			setServerTelnetMode(TELNET_ANSI16,false);
-			setClientTelnetMode(TELNET_ANSI16,false);
-			setClientTelnetMode(TELNET_TERMTYPE,true);
-			changeTelnetMode(rawout,TELNET_TERMTYPE,true);
-			negotiateTelnetMode(rawout,TELNET_TERMTYPE);
-			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MCCP))
-				changeTelnetMode(rawout,TELNET_COMPRESS2,true);
-			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP))
-				changeTelnetMode(rawout,TELNET_MXP,true);
-			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.GMCP))
-				changeTelnetMode(rawout,TELNET_GMCP,true);
-			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSP))
-				changeTelnetMode(rawout,TELNET_MSP,true);
-			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSDP))
-				changeTelnetMode(rawout,TELNET_MSDP,true);
-			//changeTelnetMode(rawout,TELNET_SUPRESS_GO_AHEAD,true);
-			changeTelnetMode(rawout,TELNET_NAWS,true);
-			//changeTelnetMode(rawout,TELNET_BINARY,true);
-			if(mightSupportTelnetMode(TELNET_GA))
-				rawBytesOut(rawout,TELNETGABYTES);
-			rawout.flush();
-
 			final Charset charSet=Charset.forName(CMProps.getVar(CMProps.Str.CHARSETINPUT));
 			inMaxBytesPerChar=(int)Math.round(Math.ceil(charSet.newEncoder().maxBytesPerChar()));
 			charWriter=new SesInputStream(inMaxBytesPerChar);
 			in=new BufferedReader(new InputStreamReader(charWriter,charSet));
 			out=new PrintWriter(new OutputStreamWriter(rawout,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
-			//final DefaultSession me = this;
-			prompt(new TickingCallback(250)
+			CMLib.s_sleep(250);
+			this.readlineContinue();
+			if(status == SessionStatus.HANDSHAKE_OPEN)
 			{
-				private final long firstIACIn=lastIACIn;
-				//final DefaultSession sess = me;
-
-				@Override
-				public boolean tick(final int counter)
-				{
-					try
-					{
-						if(out!=null)
-						{
-							out.flush();
-							rawout.flush();
-						}
-						else
-						{
-							killFlag=true;
-							return false;
-						}
-						switch(status)
-						{
-						case HANDSHAKE_OPEN:
-						{
-							if((!terminalType.equals("ANSI"))&&(getClientTelnetMode(TELNET_ECHO)))
-								changeTelnetModeBackwards(rawout,TELNET_ECHO,false);
-							rawout.flush();
-							setStatus(SessionStatus.HANDSHAKE_MCCP);
-							break;
-						}
-						case HANDSHAKE_MCCP:
-						{
-							if(((lastIACIn>firstIACIn)&&((System.currentTimeMillis()-lastIACIn)>500))
-							||((System.currentTimeMillis()-lastIACIn)>5000))
-							{
-								if(getClientTelnetMode(TELNET_COMPRESS2))
-								{
-									negotiateTelnetMode(rawout,TELNET_COMPRESS2);
-									rawout.flush();
-									if(getClientTelnetMode(TELNET_COMPRESS2))
-									{
-										final ZOutputStream zOut=new ZOutputStream(rawout, JZlib.Z_DEFAULT_COMPRESSION);
-										rawout=zOut;
-										zOut.setFlushMode(JZlib.Z_SYNC_FLUSH);
-										out = new PrintWriter(new OutputStreamWriter(zOut,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
-										if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-											Log.debugOut("MCCP compression started");
-									}
-								}
-								setStatus(SessionStatus.HANDSHAKE_MXP);
-							}
-							break;
-						}
-						case HANDSHAKE_MXP:
-						{
-							if(!getClientTelnetMode(Session.TELNET_MXP))
-								setStatus(SessionStatus.HANDSHAKE_DONE);
-							else
-							{
-								rawOut("\n\033[6z\n\033[6z<SUPPORT IMAGE IMAGE.URL>\n");
-								rawout.flush();
-								rawOut("\n\033[6z\n\033[6z<SUPPORT>\n");
-								rawout.flush();
-								setStatus(SessionStatus.HANDSHAKE_MXPPAUSE);
-							}
-							break;
-						}
-						case HANDSHAKE_MXPPAUSE:
-						{
-							if(((System.currentTimeMillis()-lastStateChangeMs)>3000)
-							||(mxpSupportSet.contains("+IMAGE.URL")||mxpSupportSet.contains("+IMAGE")||mxpSupportSet.contains("-IMAGE.URL")))
-								setStatus(SessionStatus.HANDSHAKE_DONE);
-							break;
-						}
-						case HANDSHAKE_DONE:
-						{
-							if(introTextStr!=null)
-								print(introTextStr);
-							if(out!=null)
-							{
-								out.flush();
-								rawout.flush();
-								if((getClientTelnetMode(Session.TELNET_MXP))
-								&&((mxpSupportSet.contains("+IMAGE.URL"))
-									||((mxpSupportSet.contains("+IMAGE"))&&(!mxpSupportSet.contains("-IMAGE.URL")))))
-								{
-									// also the intro page
-									final String[] paths=CMLib.protocol().mxpImagePath("intro.jpg");
-									if(paths[0].length()>0)
-									{
-										final CMFile introDir=new CMFile("/web/pub/images/mxp",null,CMFile.FLAG_FORCEALLOW);
-										String introFilename=paths[1];
-										if(introDir.isDirectory())
-										{
-											final CMFile[] files=introDir.listFiles();
-											final List<String> choices=new ArrayList<String>();
-											for (final CMFile file : files)
-											{
-												if(file.getName().toLowerCase().startsWith("intro")
-												&&file.getName().toLowerCase().endsWith(".jpg"))
-													choices.add(file.getName());
-											}
-											if(choices.size()>0)
-												introFilename=choices.get(CMLib.dice().roll(1,choices.size(),-1));
-										}
-										println("\n\r\n\r\n\r^<IMAGE '"+introFilename+"' URL='"+paths[0]+"' H=400 W=400^>\n\r\n\r");
-										if(out!=null)
-										{
-											out.flush();
-											rawout.flush();
-										}
-									}
-								}
-							}
-						}
-							//$FALL-THROUGH$
-						default:
-							connectionComplete=true;
-							status=SessionStatus.LOGIN;
-							if(collectedInput.length()>0)
-								fakeInput=new StringBuffer(collectedInput.toString());
-							return false;
-						}
-						return (out!=null);
-					}
-					catch(final Exception e)
-					{
-						if(e.getMessage()==null)
-							Log.errOut(e);
-						else
-							Log.errOut(e.getMessage());
-					}
-					connectionComplete=true;
-					status=SessionStatus.LOGIN;
-					return false;
-				}
-			});
+				if(!mcpDisabled)
+					rawBytesOut(rawout,("\n\r#$#mcp version: 2.1 to: 2.1\n\r").getBytes(CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
+				rawBytesOut(rawout,("\n\rConnecting to "+CMProps.getVar(CMProps.Str.MUDNAME)+"...\n\r").getBytes("US-ASCII"));
+				setServerTelnetMode(TELNET_ANSI,true);
+				setClientTelnetMode(TELNET_ANSI,true);
+				setServerTelnetMode(TELNET_ANSI16,false);
+				setClientTelnetMode(TELNET_ANSI16,false);
+				setServerTelnetMode(TELNET_ANSI256,false);
+				setClientTelnetMode(TELNET_ANSI256,false);
+				setClientTelnetMode(TELNET_TERMTYPE,true);
+				changeTelnetModeBackwards(rawout,TELNET_NEWENVIRON,true);
+				changeTelnetMode(rawout,TELNET_TERMTYPE,true);
+				negotiateTelnetMode(rawout,TELNET_TERMTYPE);
+				if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MCCP))
+					changeTelnetMode(rawout,TELNET_COMPRESS2,true);
+				if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP))
+					changeTelnetMode(rawout,TELNET_MXP,true);
+				if(!CMSecurity.isDisabled(CMSecurity.DisFlag.GMCP))
+					changeTelnetMode(rawout,TELNET_GMCP,true);
+				if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSP))
+					changeTelnetMode(rawout,TELNET_MSP,true);
+				if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSDP))
+					changeTelnetMode(rawout,TELNET_MSDP,true);
+				//changeTelnetMode(rawout,TELNET_SUPRESS_GO_AHEAD,true);
+				changeTelnetMode(rawout,TELNET_NAWS,true);
+				changeTelnetMode(rawout,TELNET_ECHO,false);
+				setClientTelnetMode(TELNET_LINEMODE,true);
+				changeTelnetModeBackwards(rawout,TELNET_LINEMODE,true);
+				//changeTelnetMode(rawout,TELNET_BINARY,true);
+				if(mightSupportTelnetMode(TELNET_GA))
+					rawBytesOut(rawout,TELNETGABYTES);
+				if((!CMSecurity.isDisabled(CMSecurity.DisFlag.MSSP))
+				&&(mightSupportTelnetMode(TELNET_MSSP)))
+					changeTelnetMode(rawout,TELNET_MSSP,true);
+				prompt(new HandshakeCallback(250,introTextStr));
+			}
 		}
 		catch(final Exception e)
 		{
@@ -524,9 +508,9 @@ public class DefaultSession implements Session
 
 	protected void compress2Off() throws IOException
 	{
-		changeTelnetMode(rawout,TELNET_COMPRESS2,false);
 		out.flush();
-		rawout.flush();
+		changeTelnetMode(rawout,TELNET_COMPRESS2,false);
+		//rawout.flush(); rawBytesOut already flushes
 		rawout=new BufferedOutputStream(sock.getOutputStream());
 		out = new PrintWriter(new OutputStreamWriter(rawout,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
 		CMLib.s_sleep(50);
@@ -572,25 +556,39 @@ public class DefaultSession implements Session
 			final byte[] stream={(byte)TELNET_IAC,(byte)TELNET_SB,(byte)optionCode,(byte)TELNET_IAC,(byte)TELNET_SE};
 			rawBytesOut(out, stream);
 		}
-		out.flush();
+		//out.flush(); rawBytesOut already flushes
 	}
 
+	/**
+	 * Returns what the mud is will to do immediately.
+	 *
+	 * @param telnetCode the telnet code to check
+	 * @return true if the mud is willing to do it immediately.
+	 */
 	private boolean mightSupportTelnetMode(final int telnetCode)
 	{
 		if(telnetSupportSet.size()==0)
 		{
-			telnetSupportSet.add(Integer.valueOf(Session.TELNET_MXP));
-			telnetSupportSet.add(Integer.valueOf(Session.TELNET_MSP));
-			telnetSupportSet.add(Integer.valueOf(Session.TELNET_MSDP));
-			telnetSupportSet.add(Integer.valueOf(Session.TELNET_GMCP));
+			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP))
+				telnetSupportSet.add(Integer.valueOf(Session.TELNET_MXP));
+			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSP))
+				telnetSupportSet.add(Integer.valueOf(Session.TELNET_MSP));
+			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MSDP))
+				telnetSupportSet.add(Integer.valueOf(Session.TELNET_MSDP));
+			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.GMCP))
+				telnetSupportSet.add(Integer.valueOf(Session.TELNET_GMCP));
+			if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MCCP))
+				telnetSupportSet.add(Integer.valueOf(Session.TELNET_COMPRESS2));
+			telnetSupportSet.add(Integer.valueOf(Session.TELNET_MSSP));
 			telnetSupportSet.add(Integer.valueOf(Session.TELNET_TERMTYPE));
 			telnetSupportSet.add(Integer.valueOf(Session.TELNET_BINARY));
 			telnetSupportSet.add(Integer.valueOf(Session.TELNET_ECHO));
 			telnetSupportSet.add(Integer.valueOf(Session.TELNET_LOGOUT));
 			telnetSupportSet.add(Integer.valueOf(Session.TELNET_NAWS));
+			telnetSupportSet.add(Integer.valueOf(Session.TELNET_NEWENVIRON));
+			telnetSupportSet.add(Integer.valueOf(Session.TELNET_MPCP));
 			//telnetSupportSet.add(Integer.valueOf(Session.TELNET_GA));
 			//telnetSupportSet.add(Integer.valueOf(Session.TELNET_SUPRESS_GO_AHEAD));
-			//telnetSupportSet.add(Integer.valueOf(Session.TELNET_COMPRESS2));
 			//telnetSupportSet.add(Integer.valueOf(Session.TELNET_LINEMODE));
 		}
 		return telnetSupportSet.contains(Integer.valueOf(telnetCode));
@@ -624,13 +622,28 @@ public class DefaultSession implements Session
 	{
 		final byte[] command;
 		if(telnetCode == TELNET_TERMTYPE)
+		{
 			command=new byte[]{(byte)TELNET_IAC,onOff?(byte)TELNET_DO:(byte)TELNET_DONT,(byte)telnetCode};
+			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
+				Log.debugOut("Sent: "+(onOff?"DO":"DONT")+" "+Session.TELNET_DESCS[telnetCode]);
+		}
 		else
+		{
+			if(reverseEcho && telnetCode == TELNET_ECHO)
+			{
+				if(!onOff)
+				{
+					setServerTelnetMode(Session.TELNET_ECHO, true);
+					setClientTelnetMode(Session.TELNET_ECHO, true);
+					return;
+				}
+			}
 			command=new byte[]{(byte)TELNET_IAC,onOff?(byte)TELNET_WILL:(byte)TELNET_WONT,(byte)telnetCode};
+			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
+				Log.debugOut("Sent: "+(onOff?"WILL":"WONT")+" "+Session.TELNET_DESCS[telnetCode]);
+		}
 		rawBytesOut(out, command);
-		out.flush();
-		if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-			Log.debugOut("Sent: "+(onOff?"Will":"Won't")+" "+Session.TELNET_DESCS[telnetCode]);
+		//rawout.flush(); rawBytesOut already flushes
 		setServerTelnetMode(telnetCode,onOff);
 	}
 
@@ -672,9 +685,14 @@ public class DefaultSession implements Session
 				return false;
 			if(CMSecurity.isDebugging(DbgFlag.TELNET))
 				Log.debugOut("GMCP Sent: "+(lowerEventName+" "+json));
-			rawBytesOut(rawout,TELNETBYTES_GMCP_HEAD);
-			rawBytesOut(rawout,(lowerEventName+" "+json).getBytes());
-			rawBytesOut(rawout,TELNETBYTES_END_SB);
+			final ByteArrayOutputStream bout=new ByteArrayOutputStream();
+			bout.write(TELNETBYTES_GMCP_HEAD);
+			bout.write((lowerEventName+" "+json).getBytes());
+			bout.write(TELNETBYTES_END_SB);
+			synchronized(gmcpSupports)
+			{
+				rawBytesOut(rawout,bout.toByteArray());
+			}
 			return true;
 		}
 		catch(final IOException e)
@@ -694,16 +712,25 @@ public class DefaultSession implements Session
 	{
 		try
 		{
+			if(this.reverseEcho && (telnetCode == TELNET_ECHO))
+			{
+				if(!onOff)
+				{
+					setServerTelnetMode(Session.TELNET_ECHO, true);
+					setClientTelnetMode(Session.TELNET_ECHO, true);
+					return;
+				}
+			}
 			final byte[] command={(byte)TELNET_IAC,onOff?(byte)TELNET_WILL:(byte)TELNET_WONT,(byte)telnetCode};
 			out.flush();
 			rawBytesOut(rawout, command);
-			rawout.flush();
+			//rawout.flush(); rawBytesOut already flushes
 		}
 		catch (final Exception e)
 		{
 		}
 		if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-			Log.debugOut("Sent: "+(onOff?"Will":"Won't")+" "+Session.TELNET_DESCS[telnetCode]);
+			Log.debugOut("Sent: "+(onOff?"WILL":"WONT")+" "+Session.TELNET_DESCS[telnetCode]);
 		setServerTelnetMode(telnetCode,onOff);
 	}
 
@@ -713,9 +740,9 @@ public class DefaultSession implements Session
 		if(out!=null)
 			out.flush();
 		rawBytesOut(rawout, command);
-		rawout.flush();
+		//rawout.flush(); rawBytesOut already flushes
 		if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-			Log.debugOut("Back-Sent: "+(onOff?"Do":"Don't")+" "+Session.TELNET_DESCS[telnetCode]);
+			Log.debugOut("Back-Sent: "+(onOff?"DO":"DONT")+" "+Session.TELNET_DESCS[telnetCode]);
 		setServerTelnetMode(telnetCode,onOff);
 	}
 
@@ -723,9 +750,9 @@ public class DefaultSession implements Session
 	{
 		final byte[] command={(byte)TELNET_IAC,onOff?(byte)TELNET_DO:(byte)TELNET_DONT,(byte)telnetCode};
 		rawBytesOut(out, command);
-		out.flush();
+		//rawout.flush(); rawBytesOut already flushes
 		if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-			Log.debugOut("Back-Sent: "+(onOff?"Do":"Don't")+" "+Session.TELNET_DESCS[telnetCode]);
+			Log.debugOut("Back-Sent: "+(onOff?"DO":"DONT")+" "+Session.TELNET_DESCS[telnetCode]);
 		setServerTelnetMode(telnetCode,onOff);
 	}
 
@@ -745,7 +772,7 @@ public class DefaultSession implements Session
 				final byte[] command={(byte)TELNET_IAC,(byte)TELNET_SB,(byte)telnetCode,(byte)TELNET_IAC,(byte)TELNET_SE};
 				rawBytesOut(rawout, command);
 			}
-			rawout.flush();
+			//rawout.flush(); rawBytesOut already flushes
 		}
 		catch (final Exception e)
 		{
@@ -772,12 +799,14 @@ public class DefaultSession implements Session
 	}
 
 	@Override
-	public void initTelnetMode(final int attributesBitmap)
+	public void initTelnetMode(final long attributesBitmap)
 	{
 		setServerTelnetMode(TELNET_ANSI,CMath.bset(attributesBitmap,MOB.Attrib.ANSI.getBitCode()));
 		setClientTelnetMode(TELNET_ANSI,CMath.bset(attributesBitmap,MOB.Attrib.ANSI.getBitCode()));
-		setServerTelnetMode(TELNET_ANSI16,CMath.bset(attributesBitmap,MOB.Attrib.ANSI16.getBitCode()));
-		setClientTelnetMode(TELNET_ANSI16,CMath.bset(attributesBitmap,MOB.Attrib.ANSI16.getBitCode()));
+		setServerTelnetMode(TELNET_ANSI16,CMath.bset(attributesBitmap,MOB.Attrib.ANSI16ONLY.getBitCode()));
+		setClientTelnetMode(TELNET_ANSI16,CMath.bset(attributesBitmap,MOB.Attrib.ANSI16ONLY.getBitCode()));
+		setServerTelnetMode(TELNET_ANSI256,CMath.bset(attributesBitmap,MOB.Attrib.ANSI256ONLY.getBitCode()));
+		setClientTelnetMode(TELNET_ANSI256,CMath.bset(attributesBitmap,MOB.Attrib.ANSI256ONLY.getBitCode()));
 		boolean changedSomething=false;
 		final boolean mxpSet=(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP))&&CMath.bset(attributesBitmap,MOB.Attrib.MXP.getBitCode());
 		if(mxpSet!=getClientTelnetMode(TELNET_MXP))
@@ -821,6 +850,21 @@ public class DefaultSession implements Session
 	{
 		if(newColor!=null)
 			lastColor=newColor;
+	}
+
+	@Override
+	public ColorState popMarkedColor()
+	{
+		if(markedColors.size()==0)
+			return CMLib.color().getNormalColor();
+		return markedColors.pop();
+	}
+
+	@Override
+	public void pushMarkedColor(final ColorState newColor)
+	{
+		if(newColor!=null)
+			markedColors.push(newColor);
 	}
 
 	@Override
@@ -916,9 +960,10 @@ public class DefaultSession implements Session
 	@Override
 	public int getWrap()
 	{
-		if(terminalWidth>5)
+		final int mobWrap = ((mob!=null)&&(mob.playerStats()!=null))?mob.playerStats().getWrap():PlayerStats.DEFAULT_WORDWRAP;
+		if((terminalWidth>5)&&(mobWrap == PlayerStats.DEFAULT_WORDWRAP))
 			return terminalWidth;
-		return ((mob!=null)&&(mob.playerStats()!=null))?mob.playerStats().getWrap():78;
+		return mobWrap;
 	}
 
 	public int getPageBreak()
@@ -947,9 +992,12 @@ public class DefaultSession implements Session
 	}
 
 	@Override
-	public List<String> getPreviousCMD()
+	public LinkedList<List<String>> getHistory()
 	{
-		return previousCmd;
+		synchronized(history)
+		{
+			return history;
+		}
 	}
 
 	@Override
@@ -988,38 +1036,60 @@ public class DefaultSession implements Session
 			   |(((mob!=null)&&(mob.soulMate()!=null))?MUDCmdProcessor.METAFLAG_POSSESSED:0);
 	}
 
-	public void setPreviousCmd(final List<String> cmds)
+	protected void addPreviousCmd(final List<String> cmd)
 	{
-		if(cmds==null)
+		if(cmd==null)
 			return;
-		if(cmds.size()==0)
+		if(cmd.size()==0)
 			return;
-		if((cmds.size()>0)&&(cmds.get(0).trim().startsWith("!")))
+		if((cmd.size()>0)&&(cmd.get(0).trim().startsWith("!")))
 			return;
 
-		previousCmd.clear();
-		for(int i=0;i<cmds.size();i++)
-			previousCmd.add((cmds.get(i)));
+		synchronized(history)
+		{
+			history.addLast(new XVector<String>(cmd));
+			if(history.size()>100)
+				history.removeFirst();
+		}
 	}
 
 	@Override
 	public boolean isAfk()
 	{
-		return afkFlag;
+		return afkTime!=0;
 	}
 
 	@Override
 	public void setAfkFlag(final boolean truefalse)
 	{
-		if(afkFlag==truefalse)
+		if((afkTime!=0)==truefalse)
 			return;
-		afkFlag=truefalse;
-		if(afkFlag)
+		if(truefalse)
+		{
+			afkTime=System.currentTimeMillis();
 			println("\n\rYou are now listed as AFK.");
+		}
 		else
 		{
 			afkMessage=null;
 			println("\n\rYou are no longer AFK.");
+			final MOB mob=this.mob;
+			final PlayerStats pStats=(mob==null)?null:mob.playerStats();
+			if((pStats != null)&&(mob!=null))
+			{
+				final int tells=pStats.queryTellStack(null, mob.Name(), Long.valueOf(afkTime)).size();
+				final int gtells=pStats.queryGTellStack(null, mob.Name(), Long.valueOf(afkTime)).size();
+				if((tells>0)||(gtells>0))
+				{
+					final StringBuilder missedStr = new StringBuilder("You missed: ");
+					if(tells > 0)
+						missedStr.append(tells).append(" tell(s), ");
+					if(gtells > 0)
+						missedStr.append(gtells).append(" gtell(s), ");
+					mob.tell(missedStr.substring(0,missedStr.length()-2)+".");
+				}
+			}
+			afkTime=0;
 		}
 	}
 
@@ -1064,32 +1134,59 @@ public class DefaultSession implements Session
 	{
 		try
 		{
-			if(debugBinOutput && Log.debugChannelOn())
+			if((sock==null)||(sock.isClosed())||(!sock.isConnected()))
+				return;
+			if(writeLock.tryLock(10000, TimeUnit.MILLISECONDS))
 			{
-				final StringBuilder str=new StringBuilder("OUTPUT: '");
-				for(final byte c : bytes)
-					str.append((c & 0xff)).append(" ");
-				Log.debugOut( str.toString()+"'");
+				try
+				{
+					if((sock==null)||(sock.isClosed())||(!sock.isConnected()))
+						return;
+					writeThread=Thread.currentThread();
+					writeStartTime=System.currentTimeMillis();
+					if(debugBinOutput && Log.debugChannelOn())
+					{
+						final StringBuilder str=new StringBuilder("OUTPUT: '");
+						for(final byte c : bytes)
+							str.append((c & 0xff)).append(" ");
+						Log.debugOut( str.toString()+"'");
+					}
+					if(debugStrOutput && Log.debugChannelOn())
+					{
+						final StringBuilder str=new StringBuilder("OUTPUT: '");
+						for(final byte c : bytes)
+							str.append(((c<32)||(c>127))?"%"+CMStrings.padLeftWith(Integer.toHexString((c & 0xff)).toUpperCase(), '0', 2):(""+(char)c));
+						Log.debugOut( str.toString()+"'");
+					}
+					if(this.out!=null)
+						this.out.flush();
+					out.write(bytes);
+					out.flush();
+				}
+				catch(final ArrayIndexOutOfBoundsException x)
+				{
+					Log.errOut("ZLibFail",x.getMessage());
+					this.setKillFlag(true);
+				}
+				catch(final NullPointerException x)
+				{
+					final IOException ioe=new IOException("rawBytesOut: "+x.getMessage());
+					ioe.setStackTrace(new StackTraceElement[0]);
+					throw ioe;
+				}
+				finally
+				{
+					writeThread=null;
+					writeStartTime=0;
+					lastWriteTime=System.currentTimeMillis();
+					writeLock.unlock();
+				}
 			}
-			if(this.out!=null)
-				this.out.flush();
-			out.write(bytes);
-			out.flush();
 		}
-		catch(final ArrayIndexOutOfBoundsException x)
+		catch (final Exception ioe)
 		{
-			Log.errOut("ZLibFail",x.getMessage());
-			this.setKillFlag(true);
-		}
-		catch(final NullPointerException x)
-		{
-			final IOException ioe=new IOException("rawBytesOut: "+x.getMessage());
-			ioe.setStackTrace(new StackTraceElement[0]);
-			throw ioe;
-		}
-		finally
-		{
-			lastWriteTime=System.currentTimeMillis();
+			stopSession(false,true,true, false);
+			setKillFlag(true);
 		}
 	}
 
@@ -1121,9 +1218,16 @@ public class DefaultSession implements Session
 							str.append((c & 0xff)).append(" ");
 						Log.debugOut( str.toString()+"'");
 					}
+					if(debugStrOutput && Log.debugChannelOn())
+					{
+						final StringBuilder str=new StringBuilder("OUTPUT: '");
+						for(final char c : chars)
+							str.append(((c<32)||(c>127))?"%"+CMStrings.padLeftWith(Integer.toHexString((c & 0xff)).toUpperCase(), '0', 2):(""+c));
+						Log.debugOut( str.toString()+"'");
+					}
 					out.write(chars);
 					if(out.checkError() && (!killFlag))
-						stopSession(true,true,false);
+						stopSession(true,true,true, false);
 				}
 				finally
 				{
@@ -1138,15 +1242,17 @@ public class DefaultSession implements Session
 			{
 				final String name=(mob!=null)?mob.Name():getAddress();
 				Log.errOut("DefaultSession","Kicked out "+name+" due to write-lock ("+out.getClass().getName()+".");
-				stopSession(true,true,true);
+				stopSession(true,true,true, true);
 				final Thread killThisThread=writeThread;
 				if(killThisThread!=null)
 					CMLib.killThread(killThisThread,500,1);
 			}
+			if(chars != PINGCHARS)
+				lastWasPrompt.set(false);
 		}
 		catch (final Exception ioe)
 		{
-			stopSession(true,true,false);
+			stopSession(false,true,true, false);
 			setKillFlag(true);
 		}
 	}
@@ -1313,8 +1419,8 @@ public class DefaultSession implements Session
 	{
 		if(msg==null)
 			return;
-		onlyPrint((needPrompt?"":"\n\r")+msg,false);
-		needPrompt=true;
+		onlyPrint((needPrompt?"":(lastWasPrompt.get()?"\n\r":""))+msg,false);
+		flagTextDisplayed();
 	}
 
 	@Override
@@ -1322,8 +1428,8 @@ public class DefaultSession implements Session
 	{
 		if(msg==null)
 			return;
-		onlyPrint((needPrompt?"":"\n\r")+CMLib.coffeeFilter().mxpSafetyFilter(msg, this),false);
-		needPrompt=true;
+		onlyPrint((needPrompt?"":(lastWasPrompt.get()?"\n\r":""))+CMLib.coffeeFilter().mxpSafetyFilter(msg, this),false);
+		flagTextDisplayed();
 	}
 
 	@Override
@@ -1335,6 +1441,7 @@ public class DefaultSession implements Session
 	@Override
 	public void promptPrint(final String msg)
 	{
+		lastWasPrompt.set(true);
 		print(msg);
 		if(promptSuffix.length>0)
 		{
@@ -1361,6 +1468,7 @@ public class DefaultSession implements Session
 			{
 			}
 		}
+		lastWasPrompt.set(true);
 	}
 
 	@Override
@@ -1407,7 +1515,7 @@ public class DefaultSession implements Session
 	{
 		if(msg!=null)
 			onlyPrint(applyFilters(mob,mob,null,msg,true)+"\n\r",false);
-		needPrompt=true;
+		flagTextDisplayed();
 	}
 
 	@Override
@@ -1415,7 +1523,7 @@ public class DefaultSession implements Session
 	{
 		if(msg!=null)
 			onlyPrint(applyFilters(mob,mob,null,msg,true),false);
-		needPrompt=true;
+		flagTextDisplayed();
 	}
 
 	@Override
@@ -1429,7 +1537,7 @@ public class DefaultSession implements Session
 	{
 		if(msg!=null)
 			onlyPrint(CMLib.coffeeFilter().colorOnlyFilter(msg,this)+"\n\r",noCache);
-		needPrompt=true;
+		flagTextDisplayed();
 	}
 
 	@Override
@@ -1443,6 +1551,14 @@ public class DefaultSession implements Session
 	{
 		if(msg!=null)
 			onlyPrint(CMLib.coffeeFilter().colorOnlyFilter(msg,this),noCache);
+		flagTextDisplayed();
+	}
+
+	protected void flagTextDisplayed()
+	{
+		final MOB mob=this.mob;
+		if((mob != null)&&(mob.isAttributeSet(Attrib.NOREPROMPT))&&(!mob.isInCombat()))
+			return;
 		needPrompt=true;
 	}
 
@@ -1459,7 +1575,7 @@ public class DefaultSession implements Session
 					newMsg = filter.applyFilter(mob, src, trg, tol, newMsg);
 					if(newMsg == null)
 					{
-						s.remove();
+						textFilters.remove(filter);
 						return CMLib.coffeeFilter().fullOutFilter(this,mob,src,trg,tol,msg,noWrap);
 					}
 				}
@@ -1522,7 +1638,11 @@ public class DefaultSession implements Session
 	public void prompt(final InputCallback callBack)
 	{
 		if(callBack!=null)
+		{
+			lastWasPrompt.set(true);
 			callBack.showPrompt();
+			lastWasPrompt.set(true);
+		}
 		if(this.inputCallback!=null)
 			this.inputCallback.timedOut();
 		this.inputCallback=callBack;
@@ -1579,7 +1699,7 @@ public class DefaultSession implements Session
 		return clookup;
 	}
 
-	public void handleSubOption(final int optionCode, final char[] suboptionData, final int dataSize)
+	public void handleSubOption(final int optionCode, final byte[] suboptionData, final int dataSize)
 		throws IOException
 	{
 		switch(optionCode)
@@ -1591,38 +1711,79 @@ public class DefaultSession implements Session
 					Log.debugOut("For suboption "+Session.TELNET_DESCS[optionCode]+", got code "+((int)suboptionData[0])+": "+new String(suboptionData, 1, dataSize - 1));
 				if(suboptionData[0] == 0)
 				{
-					terminalType = new String(suboptionData, 1, dataSize - 1);
-					if(terminalType.equalsIgnoreCase("ZMUD")
-					||terminalType.equalsIgnoreCase("CMUD")
-					||terminalType.equalsIgnoreCase("XTERM"))
+					final String response = new String(suboptionData, 1, dataSize - 1);
+					if(response.equals(this.lastTTypeR))
+						return;
+					this.lastTTypeR = response;
+					if(response.toUpperCase().startsWith("MTTS "))
 					{
-						if(mightSupportTelnetMode(TELNET_ECHO))
-							telnetSupportSet.remove(Integer.valueOf(TELNET_ECHO));
-						changeTelnetMode(rawout,TELNET_ECHO,false);
+						this.mttsBitmap = Long.valueOf(CMath.s_long(response.substring(5).trim()));
+						negotiateTelnetMode(rawout,TELNET_TERMTYPE);
+						return;
+					}
+					final String terminalType = response;
+					if(terminalType.equalsIgnoreCase("ZMUD")
+					||terminalType.equalsIgnoreCase("CMUD"))
+					{
+						this.terminalType = terminalType;
+						this.mttsBitmap = Long.valueOf(Session.MTTS_256COLORS|Session.MTTS_ANSI);
+					}
+					else
+					if(terminalType.startsWith("XTERM"))
+					{
+						if(this.terminalType.length()==0)
+							this.terminalType = terminalType;
+						this.mttsBitmap = Long.valueOf(Session.MTTS_256COLORS|Session.MTTS_ANSI);
 					}
 					else
 					if(terminalType.equals("ANSI"))
-						changeTelnetMode(rawout,TELNET_ECHO,true);
+					{
+						if(this.terminalType.length()==0)
+							this.terminalType = terminalType;
+						this.mttsBitmap = Long.valueOf(Session.MTTS_ANSI);
+					}
+					else
+					if(terminalType.equals("VTNT ANSI")||terminalType.equals("VTNT"))
+					{
+						if(this.terminalType.length()==0)
+							this.terminalType = terminalType;
+						this.mttsBitmap = Long.valueOf(Session.MTTS_ANSI);
+						this.changeTelnetMode(TELNET_ECHO, true);
+						this.reverseEcho=true;
+					}
+					else
+					if(terminalType.equals("ANSI-256COLOR")
+					||terminalType.equals("ANSI-TRUECOLOR"))
+					{
+						if(this.terminalType.length()==0)
+							this.terminalType = terminalType;
+						this.mttsBitmap = Long.valueOf(Session.MTTS_ANSI|Session.MTTS_256COLORS);
+					}
 					else
 					if(terminalType.startsWith("GIVE-WINTIN.NET-A-CHANCE"))
 					{
+						this.terminalType = terminalType;
 						rawOut("\n\r\n\r**** Your MUD Client is Broken! Please use another!!****\n\r\n\r");
 						rawout.flush();
 						CMLib.s_sleep(1000);
 						rawout.close();
 					}
 					else
-					if(terminalType.toLowerCase().startsWith("mushclient")&&(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP)))
+					if(terminalType.toUpperCase().startsWith("MUSHCLIENT")
+					&&(!CMSecurity.isDisabled(CMSecurity.DisFlag.MXP)))
 					{
+						this.terminalType = terminalType;
 						negotiateTelnetMode(rawout,TELNET_MXP);
 						mxpSupportSet.remove("+IMAGE");
 						mxpSupportSet.remove("+IMAGE.URL");
 						mxpSupportSet.add("-IMAGE.URL");
+						this.mttsBitmap = Long.valueOf(Session.MTTS_ANSI);
 					}
 					else
-					if(terminalType.toLowerCase().equals("simplemu")
-					||(terminalType.toLowerCase().startsWith("mudlet")))
+					if(terminalType.toUpperCase().equals("SIMPLEMU")
+					||(terminalType.toUpperCase().startsWith("MUDLET")))
 					{
+						this.terminalType = terminalType;
 						if(CMParms.indexOf(this.promptSuffix, (byte)'\n')<0)
 						{
 							promptSuffix = Arrays.copyOf(promptSuffix, promptSuffix.length+1);
@@ -1640,7 +1801,19 @@ public class DefaultSession implements Session
 							promptSuffix = Arrays.copyOf(promptSuffix, promptSuffix.length + Session.TELNETGABYTES.length);
 							System.arraycopy(Session.TELNETGABYTES, 0, promptSuffix, pos, Session.TELNETGABYTES.length);
 						}
+						this.mttsBitmap = Long.valueOf(Session.MTTS_ANSI|Session.MTTS_256COLORS);
 					}
+					else
+					if(terminalType.equalsIgnoreCase("DUMB")
+					||terminalType.toUpperCase().startsWith("VT100"))
+					{
+						if(this.terminalType.length()==0)
+							this.terminalType = terminalType;
+
+					}
+					else
+						this.terminalType = terminalType;
+					negotiateTelnetMode(rawout,TELNET_TERMTYPE);
 				}
 				else
 				if (suboptionData[0] == 1) // Request for data.
@@ -1670,14 +1843,83 @@ public class DefaultSession implements Session
 			break;
 		case TELNET_GMCP:
 			{
-				final byte[] resp=CMLib.protocol().processGmcp(this, new String(suboptionData), this.gmcpSupports);
+				final byte[] resp=CMLib.protocol().processGmcp(this, new String(suboptionData), gmcpSupports, msdpReportables);
 				if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
 				{
 					Log.debugOut("For suboption "+Session.TELNET_DESCS[optionCode]+", got "+dataSize+" bytes, sent "+((resp==null)?0:resp.length));
-					Log.debugOut(new String(suboptionData));
+					Log.debugOut("suboption data: "+new String(suboptionData));
 				}
 				if(resp!=null)
 					rawBytesOut(rawout, resp);
+			}
+			break;
+		case TELNET_MPCP:
+			{
+				if(suboptionData.length>21)
+				{
+					final byte[] digest = new byte[20];
+					final ByteBuffer rdr = ByteBuffer.wrap(suboptionData);
+					rdr.get(digest);
+					final byte[] strBuf = new byte[rdr.remaining()];
+					rdr.get(strBuf);
+					final byte[] keyBytes = CMProps.getVar(CMProps.Str.MPCPKEY).getBytes(StandardCharsets.UTF_8);
+					final SecretKeySpec keySpec = new SecretKeySpec(keyBytes, "HmacSHA1");
+					try
+					{
+						final Mac mac = Mac.getInstance("HmacSHA1");
+						mac.init(keySpec);
+						final byte[] digestCheck = mac.doFinal(strBuf);
+						if(!Arrays.equals(digest, digestCheck))
+							break;
+						final String str = new String(strBuf,"UTF-8");
+						final int x = str.indexOf(' ');
+						if(x>0)
+						{
+							final String command = str.substring(0,x).trim();
+							final String jsonStr = str.substring(x+1).trim();
+							if(CMSecurity.isDebugging(DbgFlag.TELNET))
+								Log.debugOut("MPCP Received: "+command+" "+jsonStr);
+							final MiniJSON.JSONObject obj = new MiniJSON().parseObject(jsonStr);
+							final Long timestamp = obj.getCheckedLong("timestamp");
+							if(Math.abs(System.currentTimeMillis()-timestamp.longValue())>1000)
+								break;
+							if(command.equalsIgnoreCase("clientinfo"))
+								this.ipAddress = obj.getCheckedString("client_address");
+							else
+							if(command.equalsIgnoreCase("sessioninfo"))
+							{
+								obj.remove("timestamp");
+								final boolean wasmccp2 = this.getClientTelnetMode(Session.TELNET_COMPRESS2)
+										||this.getClientTelnetMode(Session.TELNET_COMPRESS);
+								for(final String key : getStatCodes())
+									if(obj.containsKey(key.toLowerCase()))
+										setStat(key,obj.get(key.toLowerCase()).toString());
+								this.inputCallback=null;
+								final boolean ismccp2 = this.getClientTelnetMode(Session.TELNET_COMPRESS2)
+										||this.getClientTelnetMode(Session.TELNET_COMPRESS);
+								if(ismccp2 && !wasmccp2)
+								{
+									this.setClientTelnetMode(Session.TELNET_COMPRESS, false);
+									this.setClientTelnetMode(Session.TELNET_COMPRESS2, false);
+									if(!CMSecurity.isDisabled(CMSecurity.DisFlag.MCCP))
+										changeTelnetMode(rawout,TELNET_COMPRESS2,true);
+								}
+							}
+							else
+							if((mob!=null)&&(CMSecurity.isAllowedEverywhere(mob, CMSecurity.SecFlag.SHUTDOWN)))
+							{
+								final Command C = CMClass.getCommand("ProxyCtl");
+								if(C!=null)
+									C.execute(mob, new XVector<String>("PROXYCTL",command,jsonStr),
+											MUDCmdProcessor.METAFLAG_ASMESSAGE);
+							}
+						}
+					}
+					catch(final Exception e)
+					{
+						Log.errOut("MPCP",e);
+					}
+				}
 			}
 			break;
 		default:
@@ -1832,7 +2074,7 @@ public class DefaultSession implements Session
 			break;
 		case TELNET_SB:
 		{
-			CharArrayWriter subOptionStream=new CharArrayWriter();
+			ByteArrayOutputStream subOptionStream=new ByteArrayOutputStream();
 			final int subOptionCode = readByte();
 			int last = 0;
 			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
@@ -1869,7 +2111,7 @@ public class DefaultSession implements Session
 				{
 				}
 			}
-			final char[] subOptionData=subOptionStream.toCharArray();
+			final byte[] subOptionData=subOptionStream.toByteArray();
 			subOptionStream=null;
 			handleSubOption(subOptionCode, subOptionData, subOptionData.length);
 			break;
@@ -1877,11 +2119,8 @@ public class DefaultSession implements Session
 		case TELNET_DO:
 		{
 			final int last=readByte();
-			setClientTelnetMode(last,true);
 			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
 				Log.debugOut("Got DO "+Session.TELNET_DESCS[last]);
-			if((terminalType.equalsIgnoreCase("zmud")||terminalType.equalsIgnoreCase("cmud"))&&(last==Session.TELNET_ECHO))
-				setClientTelnetMode(Session.TELNET_ECHO,false);
 			if(last==TELNET_TERMTYPE)
 				negotiateTelnetMode(rawout,TELNET_TERMTYPE);
 			if((last==TELNET_COMPRESS2)&&(getServerTelnetMode(last)))
@@ -1907,13 +2146,8 @@ public class DefaultSession implements Session
 									if(getClientTelnetMode(TELNET_COMPRESS2))
 									{
 										negotiateTelnetMode(rawout,TELNET_COMPRESS2);
-										rawout.flush();
-										final ZOutputStream zOut=new ZOutputStream(rawout, JZlib.Z_DEFAULT_COMPRESSION);
-										rawout=zOut;
-										zOut.setFlushMode(JZlib.Z_SYNC_FLUSH);
-										out = new PrintWriter(new OutputStreamWriter(zOut,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
-										if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
-											Log.debugOut("MCCP compression started");
+										//rawout.flush(); rawBytesOut already flushes
+										startMCCP2();
 									}
 									break;
 								}
@@ -1940,8 +2174,47 @@ public class DefaultSession implements Session
 			if(!mightSupportTelnetMode(last))
 				changeTelnetMode(last,false);
 			else
-			if(!getServerTelnetMode(last))
-				changeTelnetMode(last,true);
+			{
+				if(!getServerTelnetMode(last))
+					changeTelnetMode(last,true);
+				if(this.reverseEcho || (last != TELNET_ECHO))
+					setClientTelnetMode(last,true);
+
+				if(last == TELNET_MSSP)
+				{
+					final ByteArrayOutputStream buf=new ByteArrayOutputStream();
+					buf.write(Session.TELNET_IAC);buf.write(Session.TELNET_SB);buf.write(Session.TELNET_MSSP);
+					final Map<String,Object> pkg = CMLib.protocol().getMSSPPackage();
+					for(final String key : pkg.keySet())
+					{
+						final Object o = pkg.get(key);
+						buf.write(1);
+						buf.write(key.getBytes("UTF-8"));
+						if(o instanceof String[])
+						{
+							final String[] os = (String[])o;
+							for(final String s : os)
+							{
+								buf.write(2);
+								buf.write(s.getBytes("UTF-8"));
+							}
+						}
+						else
+						{
+							buf.write(2);
+							buf.write(o.toString().getBytes("UTF-8"));
+						}
+					}
+					buf.write((char)Session.TELNET_IAC);buf.write((char)Session.TELNET_SE);
+					try
+					{
+						rawBytesOut(rawout, buf.toByteArray());
+					}
+					catch (final IOException e)
+					{
+					}
+				}
+			}
 			if(serverTelnetCodes[TELNET_LOGOUT])
 				setKillFlag(true);
 			break;
@@ -1958,7 +2231,7 @@ public class DefaultSession implements Session
 				rawout=new BufferedOutputStream(sock.getOutputStream());
 				out = new PrintWriter(new OutputStreamWriter(rawout,CMProps.getVar(CMProps.Str.CHARSETOUTPUT)));
 			}
-			if((mightSupportTelnetMode(last)&&(getServerTelnetMode(last))))
+			if((mightSupportTelnetMode(last))&&(getServerTelnetMode(last)))
 				changeTelnetMode(last,false);
 			break;
 		}
@@ -1968,15 +2241,23 @@ public class DefaultSession implements Session
 			if(CMSecurity.isDebugging(CMSecurity.DbgFlag.TELNET))
 				Log.debugOut("Got WILL "+Session.TELNET_DESCS[last]);
 			setClientTelnetMode(last,true);
-			if((terminalType.equalsIgnoreCase("zmud")||terminalType.equalsIgnoreCase("cmud"))&&(last==Session.TELNET_ECHO))
-				setClientTelnetMode(Session.TELNET_ECHO,false);
 			if(!mightSupportTelnetMode(last))
 				changeTelnetModeBackwards(last,false);
 			else
 			if(!getServerTelnetMode(last))
 				changeTelnetModeBackwards(last,true);
-			if(serverTelnetCodes[TELNET_LOGOUT])
-				setKillFlag(true);
+
+			if(last == TELNET_LINEMODE)
+				this.setClientTelnetMode(TELNET_LINEMODE,true);
+			else
+			if(last == TELNET_TERMTYPE)
+				negotiateTelnetMode(rawout,TELNET_TERMTYPE);
+			else
+			if(last == TELNET_LOGOUT)
+			{
+				if(serverTelnetCodes[TELNET_LOGOUT])
+					setKillFlag(true);
+			}
 			break;
 		}
 		case TELNET_WONT:
@@ -2153,7 +2434,19 @@ public class DefaultSession implements Session
 						c = -1;
 						break;
 					}
-					default:
+					case 8:
+						if(!getClientTelnetMode(TELNET_LINEMODE))
+						{
+							if(input.length()>0)
+							{
+								if (getClientTelnetMode(TELNET_ECHO))
+									rawCharsOut((char)c);
+								input.deleteCharAt(input.length()-1);
+							}
+							c=-1;
+						}
+					//$FALL-THROUGH$
+				default:
 					{
 						if(((c>>8)&0xff)>241)
 							c=-1;
@@ -2174,7 +2467,10 @@ public class DefaultSession implements Session
 						return c;
 				}
 				if(rv)
+				{
+					lastWasPrompt.set(false);
 					return 0;
+				}
 			}
 		}
 		catch(final InterruptedIOException e)
@@ -2231,6 +2527,8 @@ public class DefaultSession implements Session
 					}
 					CMLib.s_sleep(100); // if they entered nothing, make sure we dont do a busy poll
 				}
+				else
+					nextPingAtTime=now+PINGTIMEOUT;
 			}
 			if(inStr == null)
 				inStr = new StringBuilder();
@@ -2240,14 +2538,21 @@ public class DefaultSession implements Session
 
 			final String str;
 			if(filter)
-				str=CMLib.coffeeFilter().simpleInFilter(inStr,CMSecurity.isAllowed(mob,(mob!=null)?mob.location():null,CMSecurity.SecFlag.MXPTAGS));
+			{
+				final boolean doMxp = CMSecurity.isAllowed(mob,(mob!=null)?mob.location():null,CMSecurity.SecFlag.MXPTAGS);
+				final boolean isArchon = CMSecurity.isASysOp(mob);
+				str=CMLib.coffeeFilter().simpleInFilter(inStr,doMxp, isArchon);
+			}
 			else
 				str=inStr.toString();
 			if(str==null)
 				return null;
 			snoopSupportPrint(str+"\n\r",true);
 			if(debugStrInput)
-				Log.sysOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
+				Log.debugOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
+			final MOB mob=this.mob;
+			if((mob != null)&&(mob.isAttributeSet(Attrib.NOREPROMPT)))
+				needPrompt=true;
 			return str;
 		}
 		finally
@@ -2263,12 +2568,14 @@ public class DefaultSession implements Session
 
 	protected boolean sessionMCPCheck(final StringBuilder inStr)
 	{
-		if((inStr.length()>3)&&(inStr.substring(0, 2).equals("#$")))
+		if((inStr.length()>3)
+		&&(inStr.charAt(0)=='#')
+		&&(inStr.charAt(1)=='$'))
 		{
 			if(inStr.substring(0, 3).equals("#$#"))
 			{
 				if(debugStrInput)
-					Log.sysOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
+					Log.debugOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
 				if(CMLib.protocol().mcp(this,inStr,mcpKey,mcpSupported,mcpKeyPairs))
 					return false;
 			}
@@ -2292,7 +2599,7 @@ public class DefaultSession implements Session
 				if(sock.isClosed() || (!sock.isConnected()))
 				{
 					if(mob()!=null)
-						stopSession(true,CMLib.flags().isInTheGame(mob(),true),false);
+						stopSession(true,true,CMLib.flags().isInTheGame(mob(),true), false);
 					else
 						setKillFlag(true);
 					return null;
@@ -2311,12 +2618,17 @@ public class DefaultSession implements Session
 		input.setLength(0);
 		if(!sessionMCPCheck(inStr))
 			return null;
-		final String str=CMLib.coffeeFilter().simpleInFilter(inStr,CMSecurity.isAllowed(mob,(mob!=null)?mob.location():null,CMSecurity.SecFlag.MXPTAGS));
+		final boolean doMxp = CMSecurity.isAllowed(mob,(mob!=null)?mob.location():null,CMSecurity.SecFlag.MXPTAGS);
+		final boolean isArchon = CMSecurity.isASysOp(mob);
+		final String str=CMLib.coffeeFilter().simpleInFilter(inStr,doMxp, isArchon);
 		if(str==null)
 			return null;
 		snoopSupportPrint(str+"\n\r",true);
-		if(debugStrInput)
-			Log.sysOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
+		if(debugStrInput && (inStr.length()>0))
+			Log.debugOut("INPUT: "+(mob==null?"":mob.Name())+": '"+inStr.toString()+"'");
+		final MOB mob=this.mob;
+		if((mob != null)&&(mob.isAttributeSet(Attrib.NOREPROMPT)))
+			needPrompt=true;
 		return str;
 	}
 
@@ -2355,30 +2667,39 @@ public class DefaultSession implements Session
 	}
 
 	@Override
-	public String choose(final String Message, final String Choices, final String Default, final long maxTime, final List<String> paramsOut) throws IOException
+	public String choose(final String promptMsg, final String choices, final String def, final long maxTime, final List<String> paramsOut) throws IOException
 	{
 		String YN="";
 		String rest=null;
-		while((YN.equals(""))||(Choices.indexOf(YN)<0)&&(!killFlag))
+		final List<String> choiceList;
+		final boolean oneChar=choices.indexOf(',')<0;
+		if(!oneChar)
+			choiceList=CMParms.parseCommas(choices,true);
+		else
 		{
-			promptPrint(Message);
+			choiceList=new ArrayList<String>();
+			for(final char c : choices.toCharArray())
+				choiceList.add(""+c);
+		}
+		while((YN.equals("")||(!CMParms.containsIgnoreCase(choiceList, YN)))
+		&&(!killFlag))
+		{
+			promptPrint(promptMsg);
 			YN=blockingIn(maxTime, true);
 			if(YN==null)
-			{
-				return Default.toUpperCase();
-			}
+				return def.toUpperCase();
 			YN=YN.trim();
 			if(YN.equals(""))
-			{
-				return Default.toUpperCase();
-			}
-			if(YN.length()>1)
+				return def.toUpperCase();
+			if((YN.length()>1)
+			&&(oneChar))
 			{
 				if(paramsOut!=null)
 					rest=YN.substring(1).trim();
 				YN=YN.substring(0,1).toUpperCase();
 			}
 			else
+			if(oneChar)
 				YN=YN.toUpperCase();
 		}
 		if((rest!=null)&&(paramsOut!=null)&&(rest.length()>0))
@@ -2387,18 +2708,29 @@ public class DefaultSession implements Session
 	}
 
 	@Override
-	public void stopSession(final boolean removeMOB, final boolean dropSession, final boolean killThread)
+	public void stopSession(final boolean disconnect, final boolean removeMOB, final boolean dropSession, final boolean killThread)
 	{
+		if(disconnect)
+		{
+			doPing(SessionPing.DISCONNECT, null);
+			if(mob != null)
+				CMLib.intermud().registerPlayerOffline(mob);
+		}
 		setKillFlag(true);
 		setStatus(SessionStatus.LOGOUT5);
 		if(dropSession)
 		{
 			preLogout(mob);
 		}
-		if(removeMOB
-		&&(mob()!=null))
+		final MOB M = mob();
+		if(removeMOB && (M!=null))
 		{
-			mob().removeFromGame(true, dropSession);
+			if((CMSecurity.isDisabled(CMSecurity.DisFlag.LOGOUTS)
+				||(!CMLib.masking().maskCheck(CMProps.getVar(CMProps.Str.LOGOUTMASK), mob(), true)))
+			&&(!CMSecurity.isASysOp(mob())))
+			{ /* do nothing right now */ }
+			else
+				M.removeFromGame(true, dropSession);
 		}
 		if(dropSession)
 			logoutFinal();
@@ -2442,7 +2774,7 @@ public class DefaultSession implements Session
 				.append("'^>^<!ENTITY MaxMove '").append(mob.maxState().getMovement())
 				.append("'^>^<!ENTITY Exp '").append(mob.getExperience())
 				.append("'^>^<!ENTITY ExpNeed '").append(mob.getExpNeededLevel())
-				.append("'^>\n\r\n\r");
+				.append("'^>\n\r");
 		}
 		buf.append(CMLib.utensils().buildPrompt(mob, mob.playerStats().getPrompt()));
 		promptPrint("^<Prompt^>"+buf.toString()+"^</Prompt^>^.^N");
@@ -2485,7 +2817,7 @@ public class DefaultSession implements Session
 			catch(final IOException e)
 			{
 			}
-			catch (final java.lang.ArrayIndexOutOfBoundsException e)
+			catch (final IndexOutOfBoundsException e)
 			{
 			}
 			finally
@@ -2502,14 +2834,7 @@ public class DefaultSession implements Session
 	@Override
 	public String getAddress()
 	{
-		try
-		{
-			return sock.getInetAddress().getHostAddress();
-		}
-		catch (final Exception e)
-		{
-			return "Unknown (Excpt "+e.getMessage() + ")";
-		}
+		return ipAddress;
 	}
 
 	private void preLogout(final MOB M)
@@ -2523,10 +2848,12 @@ public class DefaultSession implements Session
 			try
 			{
 				loggingOutObj[0]=true;
+				final MOB mob=this.mob;
 				final boolean inTheGame=CMLib.flags().isInTheGame(M,true);
 				if(inTheGame
 				&& (M.location()!=null)
-				&&((!CMProps.getBoolVar(CMProps.Bool.MUDSHUTTINGDOWN))
+				&&(mob!=null)
+				&&((!CMProps.isState(CMProps.HostState.SHUTTINGDOWN))
 					||(CMLib.sessions().numSessions()>1)))
 				{
 					final List<Room> rooms=new ArrayList<Room>(1);
@@ -2536,11 +2863,12 @@ public class DefaultSession implements Session
 						if((M2.location()!=null)&&(!rooms.contains(M2.location())))
 							rooms.add(M2.location());
 					}
+					final CMMsg quitMsg=CMClass.getMsg(mob, CMMsg.MSG_QUIT, null);
 					for(final Room R : rooms)
 					{
 						try
 						{
-							R.send(M, CMClass.getMsg(mob, CMMsg.MSG_QUIT, null));
+							R.send(M, quitMsg);
 						}
 						catch (final Throwable t)
 						{ /* and eat it */
@@ -2565,7 +2893,7 @@ public class DefaultSession implements Session
 				{
 					final List<String> channels=CMLib.channels().getFlaggedChannelNames(ChannelsLibrary.ChannelFlag.LOGOFFS, M);
 					for(int i=0;i<channels.size();i++)
-						CMLib.commands().postChannel(channels.get(i),M.clans(),L("@x1 has logged out",name),true);
+						CMLib.commands().postChannel(channels.get(i),M.clans(),L("@x1 has logged out",name),true,M);
 				}
 				if(!M.isAttributeSet(Attrib.PRIVACY))
 					CMLib.login().notifyFriends(M,L("^X@x1 has logged off.^.^?",M.Name()));
@@ -2602,7 +2930,7 @@ public class DefaultSession implements Session
 	{
 		final MOB M = this.mob;
 		if((M==null)||(M.playerStats()==null))
-			stopSession(false,false,false);
+			stopSession(true,false,false, false);
 		else
 		{
 			preLogout(M);
@@ -2663,7 +2991,7 @@ public class DefaultSession implements Session
 		}
 		if(getClientTelnetMode(TELNET_GMCP))
 		{
-			final byte[] gmcpPingBuf=CMLib.protocol().pingGmcp(this, gmcpPings, gmcpSupports);
+			final byte[] gmcpPingBuf=CMLib.protocol().pingGmcp(this, gmcpPings, gmcpSupports, msdpReportables);
 			if(gmcpPingBuf!=null)
 			{
 				try
@@ -2816,15 +3144,15 @@ public class DefaultSession implements Session
 		final MOB mob=CMLib.players().getLoadPlayer(name);
 		if((mob==null)||(mob.playerStats()==null))
 			return false;
-		final PlayerLibrary.ThinnerPlayer player=new PlayerLibrary.ThinnerPlayer();
-		player.password=mob.playerStats().getPasswordStr();
-		if(!player.matchesPassword(password))
+		if(!CMLib.encoder().passwordCheck(password, mob.playerStats().getPasswordStr()))
 			return false;
 		try
 		{
 			setMob(mob);
 			if(CMLib.login().completePlayerLogin(this,false) == CharCreationLibrary.LoginResult.NORMAL_LOGIN)
 			{
+				if(mob.session()!=null)
+					mob.session().doPing(SessionPing.PLAYERSAVE, null);
 				this.nonBlockingIn(false);
 			}
 			else
@@ -2842,6 +3170,7 @@ public class DefaultSession implements Session
 	protected boolean setLoggedInState(final LoginResult loginResult)
 	{
 		setStatus(SessionStatus.LOGIN2);
+		final MOB mob=this.mob;
 		if((mob!=null)&&(mob.playerStats()!=null))
 			acct=mob.playerStats().getAccount();
 		if((!killFlag)&&((mob!=null)))
@@ -2850,31 +3179,37 @@ public class DefaultSession implements Session
 				CMLib.threads().suspendResumeRecurse(mob, false, false);
 			userLoginTime=System.currentTimeMillis();
 			final String ansiStr;
-			if((mob.isAttributeSet(MOB.Attrib.ANSI)&&getClientTelnetMode(Session.TELNET_ANSI)))
+			if((mob!=null)
+			&&(mob.isAttributeSet(MOB.Attrib.ANSI)&&getClientTelnetMode(Session.TELNET_ANSI)))
 			{
-				if(!mob.isAttributeSet(MOB.Attrib.ANSI16))
-					ansiStr = " ANSI";
-				else
+				if(mob.isAttributeSet(MOB.Attrib.ANSI16ONLY))
 					ansiStr = " ANSI-16";
+				else
+				if(mob.isAttributeSet(MOB.Attrib.ANSI256ONLY))
+					ansiStr = " ANSI-256";
+				else
+					ansiStr = " ANSI-True";
 			}
 			else
 				ansiStr="";
 			final StringBuilder loginMsg=new StringBuilder("");
-			loginMsg.append(getAddress()).append(" "+terminalType)
-			.append(((mob.isAttributeSet(MOB.Attrib.MXP)&&getClientTelnetMode(Session.TELNET_MXP)))?" MXP":"")
-			.append(getClientTelnetMode(Session.TELNET_MSDP)?" MSDP":"")
-			.append(getClientTelnetMode(Session.TELNET_ATCP)?" ATCP":"")
-			.append(getClientTelnetMode(Session.TELNET_GMCP)?" GMCP":"")
-			.append((getClientTelnetMode(Session.TELNET_COMPRESS)||getClientTelnetMode(Session.TELNET_COMPRESS2))?" CMP":"")
-			.append(ansiStr)
-			.append(", character login: "+mob.Name());
-			Log.sysOut(loginMsg.toString());
+			if(mob != null)
+				loginMsg.append(getAddress()).append(" "+terminalType)
+				.append(((mob.isAttributeSet(MOB.Attrib.MXP)&&getClientTelnetMode(Session.TELNET_MXP)))?" MXP":"")
+				.append(getClientTelnetMode(Session.TELNET_MSDP)?" MSDP":"")
+				.append(getClientTelnetMode(Session.TELNET_ATCP)?" ATCP":"")
+				.append(getClientTelnetMode(Session.TELNET_GMCP)?" GMCP":"")
+				.append((getClientTelnetMode(Session.TELNET_COMPRESS)||getClientTelnetMode(Session.TELNET_COMPRESS2))?" MCCP":"")
+				.append(ansiStr)
+				.append(", character login: "+mob.Name());
+			Log.sysOut(loginMsg.toString()); // the official session announcement
 			if(loginResult != CharCreationLibrary.LoginResult.NO_LOGIN)
 			{
 				final CMMsg msg = CMClass.getMsg(mob,null,CMMsg.MSG_LOGIN,null);
 				if(!CMLib.map().sendGlobalMessage(mob,CMMsg.TYP_LOGIN,msg))
 					setKillFlag(true);
 				else
+				if(mob != null)
 					CMLib.commands().monitorGlobalMessage(mob.location(), msg);
 			}
 		}
@@ -2981,7 +3316,10 @@ public class DefaultSession implements Session
 				finalMsg=acct.getAccountName()+": ";
 			else
 				finalMsg="";
-			previousCmd.clear(); // will let system know you are back in login menu
+			synchronized(history)
+			{
+				history.clear(); // will let system know you are back in login menu
+			}
 			if(acct!=null)
 			{
 				try
@@ -3010,7 +3348,7 @@ public class DefaultSession implements Session
 					{
 						final List<String> channels2=CMLib.channels().getFlaggedChannelNames(ChannelsLibrary.ChannelFlag.ACCOUNTLOGOFFS, M2);
 						for(int i=0;i<channels2.size();i++)
-							CMLib.commands().postChannel(channels2.get(i),null,L("Account @x1 has logged off.",acct.getAccountName()),true);
+							CMLib.commands().postChannel(channels2.get(i),null,L("Account @x1 has logged off.",acct.getAccountName()),true,M);
 					}
 				}
 				catch(final Exception e)
@@ -3018,6 +3356,7 @@ public class DefaultSession implements Session
 					Log.errOut(e);
 				}
 			}
+			boolean setKillFlag = true;
 			if(M!=null)
 			{
 				try
@@ -3037,6 +3376,24 @@ public class DefaultSession implements Session
 						M.setSession(this);
 						M.basePhyStats().setDisposition(mob.basePhyStats().disposition()|PhyStats.IS_SLEEPING);
 						M.phyStats().setDisposition(mob.phyStats().disposition()|PhyStats.IS_SLEEPING);
+						setKillFlag = false;
+						if(CMProps.getIntVar(CMProps.Int.LOGOUTMASKTICKS)>0)
+						{
+							CMLib.threads().scheduleRunnable(new Runnable() {
+								final MOB M1 = M;
+								final Session S1 = M.session();
+								@Override
+								public void run()
+								{
+									if(M1.session() == S1)
+									{
+										M1.removeFromGame(true,true);
+										M1.setSession(null);
+										S1.setMob(null);
+									}
+								}
+							}, CMProps.getTickMillis() * CMProps.getIntVar(CMProps.Int.LOGOUTMASKTICKS));
+						}
 					}
 					else
 					{
@@ -3055,7 +3412,7 @@ public class DefaultSession implements Session
 			}
 
 			setStatus(SessionStatus.LOGOUT4);
-			setKillFlag(true);
+			setKillFlag(setKillFlag);
 			waiting=false;
 			needPrompt=false;
 			this.acct=null;
@@ -3073,7 +3430,7 @@ public class DefaultSession implements Session
 
 	private String L(final String str, final String... xs)
 	{
-		return CMLib.lang().fullSessionTranslation(str, xs);
+		return CMLib.lang().fullSessionTranslation(getClass(), str, xs);
 	}
 
 	public void mainLoop()
@@ -3101,7 +3458,8 @@ public class DefaultSession implements Session
 				lastKeystroke=System.currentTimeMillis();
 				if(input.trim().length()>0)
 					prevMsgs.add(input);
-				setAfkFlag(false);
+				if(this.afkMessage==null)
+					setAfkFlag(false);
 				List<String> parsedInput=CMParms.parse(input);
 				final MOB mob=mob();
 				if((parsedInput.size()>0)&&(mob!=null))
@@ -3115,31 +3473,21 @@ public class DefaultSession implements Session
 					if(rawAliasDefinition.length()>0)
 					{
 						parsedInput.remove(0);
-						final List<String> allAliasedCommands=CMParms.parseSquiggleDelimited(rawAliasDefinition,true);
-						echoOn=true;
-						if((allAliasedCommands.size()>0)&&(allAliasedCommands.get(0).toString().toLowerCase().startsWith("noecho")))
-						{
-							echoOn=false;
-							allAliasedCommands.set(0, allAliasedCommands.get(0).toString().substring(6).trim());
-						}
-						for(final String aliasedCommand : allAliasedCommands)
-						{
-							// just the parsed input arguments, the original command is removed.
-							final List<String> newCommand=new XVector<String>(parsedInput);
-							executableCommands.add(newCommand);
-							final List<String> preCommands=CMParms.parse(aliasedCommand);
-							for(int v=preCommands.size()-1;v>=0;v--)
-								newCommand.add(0,preCommands.get(v));
-						}
+						final boolean[] echo = new boolean[1];
+						CMLib.utensils().deAlias(rawAliasDefinition, parsedInput, executableCommands, echo);
+						echoOn = echo[0];
 					}
 					else
 						executableCommands.add(parsedInput);
 					final double curActions = mob.actions();
 					mob.setActions(0.0);
+					int metaFlags = metaFlags();
+					if(executableCommands.size()>1)
+						metaFlags |= MUDCmdProcessor.METAFLAG_INORDER;
 					for(final Iterator<List<String>> i=executableCommands.iterator();i.hasNext();)
 					{
 						parsedInput=i.next();
-						setPreviousCmd(parsedInput);
+						addPreviousCmd(parsedInput);
 						milliTotal+=(lastStop-lastStart);
 
 						lastStart=System.currentTimeMillis();
@@ -3147,7 +3495,7 @@ public class DefaultSession implements Session
 							rawPrintln(CMParms.combineQuoted(parsedInput,0));
 						final List<List<String>> MORE_CMDS=CMLib.lang().preCommandParser(parsedInput);
 						for(int m=0;m<MORE_CMDS.size();m++)
-							mob.enqueCommand(MORE_CMDS.get(m),metaFlags()|MUDCmdProcessor.METAFLAG_INORDER,0);
+							mob.enqueCommand(MORE_CMDS.get(m),metaFlags,0);
 						lastStop=System.currentTimeMillis();
 					}
 					mob.setActions(curActions);
@@ -3179,7 +3527,7 @@ public class DefaultSession implements Session
 					if(minsIdle>=CMath.s_int(V.firstElement()))
 					{
 						println(CMLib.lang().L("\n\r^ZYou are being logged out!^?"));
-						stopSession(true,true,false);
+						stopSession(false,true,true, false);
 					}
 					else
 					if(minsIdle>=CMath.s_int(V.lastElement()))
@@ -3195,7 +3543,7 @@ public class DefaultSession implements Session
 					{
 						setAfkFlag(true);
 						if((mob.isPlayer())&&(CMProps.getIntVar(CMProps.Int.RP_GOAFK)!=0))
-							CMLib.leveler().postRPExperience(mob, null, "", CMProps.getIntVar(CMProps.Int.RP_GOAFK), false);
+							CMLib.leveler().postRPExperience(mob, "GOAFK:", null, "", CMProps.getIntVar(CMProps.Int.RP_GOAFK), false);
 					}
 				}
 				else
@@ -3258,6 +3606,25 @@ public class DefaultSession implements Session
 		}
 	}
 
+
+	@Override
+	public boolean isMTTS()
+	{
+		return this.mttsBitmap != null;
+	}
+
+	@Override
+	public boolean getMTTS(final int bitmap)
+	{
+		synchronized(this)
+		{
+			final Long mtts = this.mttsBitmap;
+			if(mtts != null)
+				return (mtts.longValue() & bitmap) == bitmap;
+		}
+		return false;
+	}
+
 	@Override
 	public long activeTimeMillis()
 	{
@@ -3265,6 +3632,72 @@ public class DefaultSession implements Session
 			return 0;
 		return System.currentTimeMillis()-activeMillis;
 	}
+
+	public void initializeDebugSession()
+	{
+		debugStrInput = CMSecurity.isDebugging(CMSecurity.DbgFlag.INPUT);
+		debugBinOutput = CMSecurity.isDebugging(CMSecurity.DbgFlag.BINOUT);
+		debugStrOutput = CMSecurity.isDebugging(CMSecurity.DbgFlag.STROUT);
+		debugBinInput = CMSecurity.isDebugging(CMSecurity.DbgFlag.BININ);
+		if(debugBinInput)
+		{
+			CMLib.threads().startTickDown(new Tickable()
+			{
+				@Override
+				public String ID()
+				{
+					return "SessionTicker";
+				}
+
+				@Override
+				public CMObject newInstance()
+				{
+					return null;
+				}
+
+				@Override
+				public CMObject copyOf()
+				{
+					return null;
+				}
+
+				@Override
+				public void initializeClass()
+				{
+				}
+
+				@Override
+				public int compareTo(final CMObject o)
+				{
+					return 0;
+				}
+
+				@Override
+				public String name()
+				{
+					return ID();
+				}
+
+				@Override
+				public int getTickStatus()
+				{
+					return 0;
+				}
+
+				@Override
+				public boolean tick(final Tickable ticking, final int tickID)
+				{
+					if(debugBinInputBuf.length()>0)
+					{
+						Log.debugOut("BINPUT: "+(mob==null?"":mob.Name())+": '"+debugBinInputBuf.toString()+"'");
+						debugBinInputBuf.setLength(0);
+					}
+					return !killFlag;
+				}
+			}, 0, 1, 1);
+		}
+	}
+
 
 	public static class LoginLogoutThread implements CMRunnable, Tickable
 	{
@@ -3293,7 +3726,7 @@ public class DefaultSession implements Session
 		{
 			try
 			{
-				return getClass().newInstance();
+				return getClass().getDeclaredConstructor().newInstance();
 			}
 			catch (final Exception e)
 			{
@@ -3368,8 +3801,8 @@ public class DefaultSession implements Session
 				if((M.location()!=null)&&(!skipRooms.contains(M.location())))
 					skipRooms.add(M.location());
 			}
-			if((!CMProps.getBoolVar(CMProps.Bool.MUDSHUTTINGDOWN))
-			&&(CMProps.getBoolVar(CMProps.Bool.MUDSTARTED)))
+			if((!CMProps.isState(CMProps.HostState.SHUTTINGDOWN))
+			&&(CMProps.isState(CMProps.HostState.RUNNING)))
 			{
 				final CMMsg msg=CMClass.getMsg(theMOB,null,msgCode,null);
 				Room R=theMOB.location();
@@ -3398,8 +3831,8 @@ public class DefaultSession implements Session
 		public void run()
 		{
 			activeMillis=System.currentTimeMillis();
-			if((!CMProps.getBoolVar(CMProps.Bool.MUDSHUTTINGDOWN))
-			&&(CMProps.getBoolVar(CMProps.Bool.MUDSTARTED)))
+			if((!CMProps.isState(CMProps.HostState.SHUTTINGDOWN))
+			&&(CMProps.isState(CMProps.HostState.RUNNING)))
 			{
 				final CMMsg msg=CMClass.getMsg(theMOB,null,msgCode,null);
 				Room R=null;
@@ -3448,10 +3881,117 @@ public class DefaultSession implements Session
 		lastWriteTime=System.currentTimeMillis();
 	}
 
-	private static enum SESS_STAT_CODES {PREVCMD,ISAFK,AFKMESSAGE,ADDRESS,IDLETIME,
-										 LASTMSG,LASTNPCFIGHT,LASTPKFIGHT,TERMTYPE,
+	@Override
+	public boolean sendMPCPPacket(final String command, final MiniJSON.JSONObject doc)
+	{
+		if(!getClientTelnetMode(TELNET_MPCP))
+			return false;
+		try
+		{
+			doc.put("timestamp", Long.valueOf(System.currentTimeMillis()));
+			final String mpcpKey = CMProps.getVar(CMProps.Str.MPCPKEY);
+			final byte[] keyBytes = mpcpKey.getBytes(StandardCharsets.UTF_8);
+			final byte[] payloadBytes = (command+" "+doc.toString()).getBytes(StandardCharsets.UTF_8);
+			final SecretKeySpec keySpec = new SecretKeySpec(keyBytes, "HmacSHA1");
+			final Mac mac = Mac.getInstance("HmacSHA1");
+			mac.init(keySpec);
+			final ByteArrayOutputStream packetOut = new ByteArrayOutputStream();
+			packetOut.write(new byte[] { (byte)Session.TELNET_IAC, (byte)Session.TELNET_SB, (byte)Session.TELNET_MPCP});
+			for(final byte b : mac.doFinal(payloadBytes))
+			{
+				if (b == (byte)0xFF)
+					packetOut.write(new byte[] {(byte)0xFF,(byte)0xFF});
+				else
+					packetOut.write(b);
+			}
+			packetOut.write(payloadBytes);
+			packetOut.write(new byte[] { (byte)Session.TELNET_IAC, (byte)Session.TELNET_SE});
+			rawBytesOut(rawout, packetOut.toByteArray());
+			return true;
+		}
+		catch(final Exception e)
+		{
+			Log.errOut(e);
+		}
+		return false;
+	}
+
+	@Override
+	public void doPing(final SessionPing ping, final Object obj)
+	{
+		switch(ping)
+		{
+		case DISCONNECT:
+			if(getClientTelnetMode(TELNET_MPCP))
+				sendMPCPPacket("Disconnect", new MiniJSON.JSONObject());
+			break;
+		case GMCP_PING_ALL:
+			if(getClientTelnetMode(TELNET_GMCP))
+			{
+				this.gmcpPings.clear();
+				this.doProtocolPings();
+			}
+			break;
+		case GMCP_PING_MED:
+			{
+				if(getClientTelnetMode(TELNET_GMCP))
+				{
+					this.gmcpPings.remove("system.nextMedReport");
+					this.doProtocolPings();
+				}
+				break;
+			}
+		case GMCP_PING_EFFECTS:
+		{
+			if(getClientTelnetMode(TELNET_GMCP)
+			&&(this.gmcpSupports.containsKey("char.effects")||this.gmcpSupports.containsKey("char.effects.get")))
+			{
+				this.gmcpPings.remove("system.nextEffReport");
+				this.doProtocolPings();
+				if(obj instanceof Long)
+					this.gmcpPings.put("system.lastEffectHash", (Long)obj);
+			}
+			break;
+		}
+		case ROOMLOOK:
+			if(getClientTelnetMode(TELNET_GMCP))
+			{
+				final byte[] gmcpPingBuf=CMLib.protocol().invokeRoomChangeGmcp(this, gmcpPings, gmcpSupports, msdpReportables);
+				if(gmcpPingBuf!=null)
+				{
+					try
+					{
+						rawBytesOut(rawout, gmcpPingBuf);
+					}
+					catch (final IOException e)
+					{
+					}
+				}
+			}
+			break;
+		case PLAYERSAVE:
+			if(getClientTelnetMode(TELNET_MPCP))
+			{
+				final MiniJSON.JSONObject doc = new MiniJSON.JSONObject();
+				for(final String stat : this.getStatCodes())
+					doc.put(stat.toLowerCase(), getStat(stat));
+				doc.remove("lastmsg");
+				sendMPCPPacket("SessionInfo", doc);
+			}
+			break;
+		}
+	}
+
+	private static enum SESS_STAT_CODES {GROUPNAME,GROUPCHAR,TELNETSCODES,TELNETCCODES,
+										 TERMTYPE,ACCTOUNTNAME,MOBNAME,
+										 PREVCMD,ISAFK,AFKMESSAGE,ADDRESS,IDLETIME,
+										 LASTMSG,LASTNPCFIGHT,LASTPKFIGHT,
 										 TOTALMILLIS,TOTALTICKS,WRAP,LASTLOOPTIME,
-										 ROOMLOOK}
+										 TWRAP,MXPSUPPORTS, MXPVERINFO, MSDPREPORTS,
+										 GMCPSUPPORTS, STRCACHE, MCPKEY, MCPKEYPAIRS,
+										 MCPSUPPORTS,
+										 MTTSBITS,TERMHEIGHT,PSUFFIX,
+										 LOGINTIME,ONLINETIME,ACTIVETIME}
 
 	@Override
 	public int getSaveStatIndex()
@@ -3482,12 +4022,14 @@ public class DefaultSession implements Session
 		final SESS_STAT_CODES stat = getStatIndex(code);
 		if (stat == null)
 		{
+			if(strCache.containsKey(code.toUpperCase().trim()))
+				return strCache.get(code.toUpperCase().trim());
 			return "";
 		}
 		switch (stat)
 		{
 		case PREVCMD:
-			return CMParms.combineQuoted(getPreviousCMD(), 0);
+			return (getHistory().size()>0)?CMParms.combineQuoted(getHistory().getLast(), 0):"";
 		case ISAFK:
 			return "" + isAfk();
 		case AFKMESSAGE:
@@ -3512,8 +4054,83 @@ public class DefaultSession implements Session
 			return "" + getWrap();
 		case LASTLOOPTIME:
 			return CMLib.time().date2String(getInputLoopTime());
-		case ROOMLOOK:
-			break; // do nothing
+		case TWRAP:
+			return ""+this.terminalWidth;
+		case MXPSUPPORTS:
+			return CMParms.toListString(mxpSupportSet);
+		case MXPVERINFO:
+		{
+			final MiniJSON.JSONObject obj = new MiniJSON.JSONObject();
+			obj.putAll(mxpVersionInfo);
+			return obj.toString();
+		}
+		case MSDPREPORTS:
+		{
+			try
+			{
+				final ByteArrayOutputStream bout = new ByteArrayOutputStream();
+				final ObjectOutputStream oout = new ObjectOutputStream(bout);
+				oout.writeObject(msdpReportables);
+				oout.flush();
+				return Base64.getEncoder().encodeToString(bout.toByteArray());
+			}
+			catch (final IOException e)
+			{
+				Log.errOut(e);
+			}
+			break;
+		}
+		case GMCPSUPPORTS:
+		{
+			final MiniJSON.JSONObject obj = new MiniJSON.JSONObject();
+			obj.putAll(gmcpSupports);
+			return obj.toString();
+		}
+		case STRCACHE:
+		{
+			final MiniJSON.JSONObject obj = new MiniJSON.JSONObject();
+			obj.putAll(strCache);
+			return obj.toString();
+		}
+		case MCPKEY:
+			return mcpKey[0]==null?"":mcpKey[0];
+		case MCPKEYPAIRS:
+		{
+			final MiniJSON.JSONObject obj = new MiniJSON.JSONObject();
+			obj.putAll(mcpKeyPairs);
+			return obj.toString();
+		}
+		case MCPSUPPORTS:
+		{
+			final MiniJSON.JSONObject obj = new MiniJSON.JSONObject();
+			for(final String key : mcpSupported.keySet())
+				obj.put(key, Double.valueOf(mcpSupported.get(key)[0]));
+			return obj.toString();
+		}
+		case GROUPNAME:
+			return ""+this.groupName;
+		case GROUPCHAR:
+			return ""+this.threadGroupChar;
+		case MOBNAME:
+			return (mob==null)?"":mob.Name();
+		case ACCTOUNTNAME:
+			return (acct==null)?"":acct.getAccountName();
+		case TELNETSCODES:
+			return Bitmap.fromBoolArray(serverTelnetCodes).toHexString();
+		case TELNETCCODES:
+			return Bitmap.fromBoolArray(clientTelnetCodes).toHexString();
+		case MTTSBITS:
+			return (mttsBitmap==null)?"":mttsBitmap.toString();
+		case TERMHEIGHT:
+			return ""+terminalHeight;
+		case PSUFFIX:
+			return (promptSuffix.length==0)?"":Base64.getEncoder().encodeToString(promptSuffix);
+		case LOGINTIME:
+			return ""+userLoginTime;
+		case ONLINETIME:
+			return ""+onlineTime;
+		case ACTIVETIME:
+			return ""+activeMillis;
 		default:
 			Log.errOut("Session", "getStat:Unhandled:" + stat.toString());
 			break;
@@ -3527,20 +4144,23 @@ public class DefaultSession implements Session
 		final SESS_STAT_CODES stat = getStatIndex(code);
 		if (stat == null)
 		{
+			strCache.put(code.toUpperCase().trim(),val);
 			return;
 		}
 		switch (stat)
 		{
 		case PREVCMD:
-			previousCmd = CMParms.parse(val);
+			addPreviousCmd(CMParms.parse(val));
 			break;
 		case ISAFK:
-			afkFlag = CMath.s_bool(val);
+			setAfkFlag(CMath.s_bool(val));
 			break;
 		case AFKMESSAGE:
 			afkMessage = val;
 			break;
 		case ADDRESS:
+			if(val.length()>0)
+				this.ipAddress=val;
 			return;
 		case IDLETIME:
 			lastKeystroke = CMLib.time().string2Millis(val);
@@ -3563,6 +4183,9 @@ public class DefaultSession implements Session
 		case TOTALTICKS:
 			tickTotal = CMath.s_int(val);
 			break;
+		case TWRAP:
+			this.terminalWidth = CMath.s_int(val);
+			break;
 		case WRAP:
 			if ((mob != null) && (mob.playerStats() != null))
 				mob.playerStats().setWrap(CMath.s_int(val));
@@ -3570,21 +4193,265 @@ public class DefaultSession implements Session
 		case LASTLOOPTIME:
 			lastLoopTop = CMLib.time().string2Millis(val);
 			break;
-		case ROOMLOOK:
-			if(getClientTelnetMode(TELNET_GMCP))
+		case MXPSUPPORTS:
+		{
+			mxpSupportSet.clear();
+			mxpSupportSet.addAll(CMParms.parseCommas(val, true));
+			break;
+		}
+		case MXPVERINFO:
+		{
+			mxpVersionInfo.clear();
+			if((val.length()>0)&&(val.trim().startsWith("{")))
 			{
-				final byte[] gmcpPingBuf=CMLib.protocol().invokeRoomChangeGmcp(this, gmcpPings, gmcpSupports);
-				if(gmcpPingBuf!=null)
+				try
 				{
-					try
+					final MiniJSON.JSONObject obj = new MiniJSON().parseObject(val);
+					for(final String key : obj.keySet())
 					{
-						rawBytesOut(rawout, gmcpPingBuf);
+						try
+						{
+							mxpVersionInfo.put(key, obj.getCheckedString(key));
+						}
+						catch(final MiniJSON.MJSONException e)
+						{}
 					}
-					catch (final IOException e)
+				}
+				catch(final MiniJSON.MJSONException e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case MSDPREPORTS:
+		{
+			msdpReportables.clear();
+			if(val.trim().length()>0)
+			{
+				try
+				{
+					final byte[] bs = Base64.getDecoder().decode(val);
+					final ByteArrayInputStream bout = new ByteArrayInputStream(bs);
+					final ObjectInputStream ooin = new ObjectInputStream(bout);
+					@SuppressWarnings({ "rawtypes", "unchecked" })
+					final Map<Object,Object> m = (Map)ooin.readObject();
+					ooin.close();
+					msdpReportables.putAll(m);
+				}
+				catch (final Exception e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case GMCPSUPPORTS:
+		{
+			gmcpSupports.clear();
+			if((val.length()>0)&&(val.trim().startsWith("{")))
+			{
+				try
+				{
+					final MiniJSON.JSONObject obj = new MiniJSON().parseObject(val);
+					for(final String key : obj.keySet())
 					{
+						try
+						{
+							gmcpSupports.put(key, obj.getCheckedDouble(key));
+						}
+						catch(final MiniJSON.MJSONException e)
+						{}
+					}
+				}
+				catch(final MiniJSON.MJSONException e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case STRCACHE:
+		{
+			strCache.clear();
+			if((val.length()>0)&&(val.trim().startsWith("{")))
+			{
+				try
+				{
+					final MiniJSON.JSONObject obj = new MiniJSON().parseObject(val);
+					for(final String key : obj.keySet())
+					{
+						try
+						{
+							strCache.put(key, obj.getCheckedString(key));
+						}
+						catch(final MiniJSON.MJSONException e)
+						{}
+					}
+				}
+				catch(final MiniJSON.MJSONException e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case MCPKEY:
+			if(val.trim().length()==0)
+				mcpKey[0]=null;
+			else
+				mcpKey[0]=val;
+			break;
+		case MCPKEYPAIRS:
+		{
+			mcpKeyPairs.clear();
+			if((val.length()>0)&&(val.trim().startsWith("{")))
+			{
+				try
+				{
+					final MiniJSON.JSONObject obj = new MiniJSON().parseObject(val);
+					for(final String key : obj.keySet())
+					{
+						try
+						{
+							mcpKeyPairs.put(key, obj.getCheckedString(key));
+						}
+						catch(final MiniJSON.MJSONException e)
+						{}
+					}
+				}
+				catch(final MiniJSON.MJSONException e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case MCPSUPPORTS:
+		{
+			mcpSupported.clear();
+			if((val.length()>0)&&(val.trim().startsWith("{")))
+			{
+				try
+				{
+					final MiniJSON.JSONObject obj = new MiniJSON().parseObject(val);
+					for(final String key : obj.keySet())
+					{
+						try
+						{
+							mcpSupported.put(key, new float[] {(float)obj.getCheckedDouble(key).doubleValue()});
+						}
+						catch(final MiniJSON.MJSONException e)
+						{}
+					}
+				}
+				catch(final MiniJSON.MJSONException e)
+				{
+					Log.errOut(e);
+				}
+			}
+			break;
+		}
+		case GROUPNAME:
+			if((!val.equals(this.groupName))&&(val.length()>0))
+			{
+				this.groupName=val;
+			}
+			//$FALL-THROUGH$
+		case GROUPCHAR:
+			if(val.length()>0)
+			{
+				if(this.threadGroupChar != val.charAt(0))
+				{
+					((Sessions)CMLib.library(this.threadGroupChar, CMLib.Library.SESSIONS)).remove(this);
+					this.threadGroupChar = val.charAt(0);
+					((Sessions)CMLib.library(this.threadGroupChar, CMLib.Library.SESSIONS)).add(this);
+				}
+			}
+			break;
+		case MOBNAME:
+			if(val.length()>0)
+			{
+				if(mob == null)
+				{
+					mob=((PlayerLibrary)CMLib.library(this.threadGroupChar, CMLib.Library.PLAYERS)).getLoadPlayer(val);
+					if((mob!=null)&&(!CMLib.flags().isInTheGame(mob, true)))
+					{
+						mob.setSession(this);
+						connectionComplete=true;
+						setLoggedInState(LoginResult.NORMAL_LOGIN);
+						status=SessionStatus.MAINLOOP;
+						if(mob.location()!=null)
+						{
+							final DefaultSession s = this;
+							CMLib.threads().executeRunnable(threadGroupChar, new Runnable()
+							{
+								final DefaultSession sess = s;
+								@Override
+								public void run()
+								{
+									mob.bringToLife(mob.location(), false);
+									sess.needPrompt=true;
+								}
+							});
+						}
 					}
 				}
 			}
+			break;
+		case ACCTOUNTNAME:
+			if(val.length()>0)
+				acct=((PlayerLibrary)CMLib.library(this.threadGroupChar, CMLib.Library.PLAYERS)).getLoadAccount(val);
+			break;
+		case TELNETSCODES:
+		{
+			try
+			{
+				if(val.trim().length()>0)
+					new Bitmap(val).toBoolArray(serverTelnetCodes);
+			}
+			catch (final Exception e)
+			{
+				Log.errOut(e);
+			}
+			break;
+		}
+		case TELNETCCODES:
+		{
+			try
+			{
+				if(val.trim().length()>0)
+					new Bitmap(val).toBoolArray(clientTelnetCodes);
+			}
+			catch (final Exception e)
+			{
+				Log.errOut(e);
+			}
+			break;
+		}
+		case MTTSBITS:
+			if(val.trim().length()==0)
+				mttsBitmap = null;
+			else
+				mttsBitmap = Long.valueOf(CMath.s_long(val));
+			break;
+		case TERMHEIGHT:
+			terminalHeight = CMath.s_int(val);
+			break;
+		case PSUFFIX:
+			if(val.trim().length()==0)
+				promptSuffix=new byte[0];
+			else
+				promptSuffix=Base64.getDecoder().decode(val);
+			break;
+		case LOGINTIME:
+			userLoginTime = CMath.s_long(val);
+			break;
+		case ONLINETIME:
+			onlineTime = CMath.s_long(val);
+			break;
+		case ACTIVETIME:
+			activeMillis = CMath.s_long(val);
 			break;
 		default:
 			Log.errOut("Session", "setStat:Unhandled:" + stat.toString());
