@@ -6,9 +6,15 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.PrintStream;
 import java.net.Socket;
+import java.sql.ResultSet;
+import java.util.Arrays;
+import java.util.Enumeration;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.Vector;
 
 import com.planet_ink.coffee_mud.Commands.Shell;
@@ -17,6 +23,7 @@ import com.planet_ink.coffee_mud.Common.interfaces.PlayerAccount;
 import com.planet_ink.coffee_mud.Common.interfaces.Session;
 import com.planet_ink.coffee_mud.Common.interfaces.Session.InputCallback;
 import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionFilter;
+import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionPing;
 import com.planet_ink.coffee_mud.Common.interfaces.Session.SessionStatus;
 import com.planet_ink.coffee_mud.Libraries.Clans;
 import com.planet_ink.coffee_mud.Libraries.interfaces.ColorLibrary;
@@ -26,13 +33,17 @@ import com.planet_ink.coffee_mud.MOBS.StdMOB;
 import com.planet_ink.coffee_mud.MOBS.interfaces.MOB;
 import com.planet_ink.coffee_mud.core.CMClass;
 import com.planet_ink.coffee_mud.core.CMClass.CMObjectType;
+import com.planet_ink.coffee_mud.core.collections.XVector;
 import com.planet_ink.coffee_mud.core.CMFile;
 import com.planet_ink.coffee_mud.core.CMLib;
+import com.planet_ink.coffee_mud.core.CMLib.Library;
 import com.planet_ink.coffee_mud.core.CMParms;
 import com.planet_ink.coffee_mud.core.CMProps;
 import com.planet_ink.coffee_mud.core.CMSecurity;
 import com.planet_ink.coffee_mud.core.CMStrings;
+import com.planet_ink.coffee_mud.core.CMath;
 import com.planet_ink.coffee_mud.core.Log;
+import com.planet_ink.coffee_mud.core.MiniJSON;
 import com.planet_ink.coffee_mud.core.Resources;
 import com.planet_ink.coffee_mud.core.database.DBConnection;
 import com.planet_ink.coffee_mud.core.database.DBConnector;
@@ -43,7 +54,7 @@ import com.planet_ink.coffee_mud.core.interfaces.MudHost;
 import com.planet_ink.coffee_mud.core.interfaces.Physical;
 import com.planet_ink.coffee_mud.core.interfaces.Tickable;
 /*
-Copyright 2007-2020 Bo Zimmerman
+Copyright 2007-2025 Bo Zimmerman
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -59,6 +70,8 @@ limitations under the License.
 */
 public class VFShell
 {
+	public final static PrintStream outStream = System.out;
+
 	public static void main(final String[] args)
 	{
 		final ThreadGroup g=new ThreadGroup("0");
@@ -101,7 +114,7 @@ public class VFShell
 				page=CMProps.loadPropPage(iniFile);
 				if ((page==null)||(!page.isLoaded()))
 				{
-					System.out.println("ERROR: Unable to read ini file: '"+iniFile+"'.");
+					outStream.println("ERROR: Unable to read ini file: '"+iniFile+"'.");
 					System.exit(-1);
 					return;
 				}
@@ -128,7 +141,7 @@ public class VFShell
 					CMProps.setUpLowVar(CMProps.Str.MUDSTATUS,"Booting: connecting to database");
 					currentDBconnector=new DBConnector(dbClass,dbService,dbUser,dbPass,dbParms,dbConns,dbPingIntMins,dbReuse,dbTransact,useQue,useQueStart);
 					currentDBconnector.reconnect();
-					CMLib.registerLibrary(new DBInterface(currentDBconnector,CMProps.getPrivateSubSet("DB.*")));
+					CMLib.registerLibrary(new DBInterface(currentDBconnector,CMProps.getPrivateSubSet("DB.*"),null));
 
 					final DBConnection DBTEST=currentDBconnector.DBFetch();
 					if(DBTEST!=null)
@@ -169,36 +182,179 @@ public class VFShell
 				CMClass.initialize();
 				Resources.initialize();
 				CMSecurity.instance();
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.AutoTitles());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMJournals());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.BeanCounter());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CharCreation());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Clans());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMAbleMap());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMAbleParms());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMCatalog());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMChannels());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMColor());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMMap());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeMaker());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDPercolator());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.EnglishParser());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeUtensils());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMEncoder());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMGenEditor());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeFilter());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMLister());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Dice());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.DirtyLanguage());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Sense());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.XMLManager());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDZapper());
-				CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeTime());
+				for(final Library L : CMLib.Library.values())
+				{
+					switch(L)
+					{
+					case ABLECOMP:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMAbleComps());
+						break;
+					case ABLEMAP:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMAbleMap());
+						break;
+					case ABLEPARMS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMAbleParms());
+						break;
+					case ACHIEVEMENTS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Achievements());
+						break;
+					case AREAGEN:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDPercolator());
+						break;
+					case AUTOAWARDS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.AutoAwards());
+						break;
+					case CATALOG:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMCatalog());
+						break;
+					case CHANNELS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMChannels());
+						break;
+					case CITY:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CityCafe());
+						break;
+					case CLANS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Clans());
+						break;
+					case COLOR:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Brown());
+						break;
+					case COMBAT:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDFight());
+						break;
+					case COMMANDS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CommonMsgs());
+						break;
+					case DATABASE:
+						break;
+					case DICE:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Dice());
+						break;
+					case ENCODER:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMEncoder());
+						break;
+					case ENGLISH:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.EnglishParser());
+						break;
+					case EXPERTISES:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.ColumbiaUniv());
+						break;
+					case FACTIONS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Factions());
+						break;
+					case FLAGS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Sense());
+						break;
+					case GALACTIC:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeDark());
+						break;
+					case GENEDITOR:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMGenEditor());
+						break;
+					case HELP:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDHelp());
+						break;
+					case INTERMUD:
+						break;
+					case JOURNALS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMJournals());
+						break;
+					case LANGUAGE:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.DirtyLanguage());
+						break;
+					case LEGAL:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDLaw());
+						break;
+					case LEVELS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeLevels());
+						break;
+					case LISTER:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMLister());
+						break;
+					case LOGIN:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CharCreation());
+						break;
+					case MAP:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMMap());
+						break;
+					case MASKING:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDZapper());
+						break;
+					case MATERIALS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.RawCMaterial());
+						break;
+					case MONEY:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.BeanCounter());
+						break;
+					case OBJBUILDERS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeMaker());
+						break;
+					case PLAYERS:
+						break;
+					case POLLS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Polls());
+						break;
+					case PROTOCOL:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CMProtocols());
+						break;
+					case QUEST:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Quests());
+						break;
+					case SESSIONS:
+						break;
+					case SHOPS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeShops());
+						break;
+					case SLAVERY:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.SlaveryParser());
+						break;
+					case SMTP:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.SMTPclient());
+						break;
+					case SOCIALS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.Socials());
+						break;
+					case STATS:
+						break;
+					case TECH:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.GroundWired());
+						break;
+					case TELNET:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeFilter());
+						break;
+					case THREADS:
+						break;
+					case TIME:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeTime());
+						break;
+					case TIMS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.TimsLibrary());
+						break;
+					case TRACKING:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.MUDTracker());
+						break;
+					case UTENSILS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.CoffeeUtensils());
+						break;
+					case WEBMACS:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.WebMacroCreamer());
+						break;
+					case WORLDHUNT:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.WorldHuntUtils());
+						break;
+					case XML:
+						CMLib.registerLibrary(new com.planet_ink.coffee_mud.Libraries.XMLManager());
+						break;
+					}
+				}
 				CMClass.addClass(CMObjectType.COMMON, new com.planet_ink.coffee_mud.Common.DefaultCharState());
 				CMClass.addClass(CMObjectType.COMMON, new com.planet_ink.coffee_mud.Common.DefaultCharStats());
 				CMClass.addClass(CMObjectType.COMMON, new com.planet_ink.coffee_mud.Common.DefaultPhyStats());
+				CMSecurity.setSysOp("-LEVEL +>30");
 
 				final MOB fakeMob = new StdMOB();
+				fakeMob.basePhyStats().setLevel(101);
+				fakeMob.phyStats().setLevel(101);
 
 				final Session session = new Session()
 				{
@@ -222,7 +378,7 @@ public class VFShell
 					{
 						try
 						{
-							return getClass().newInstance();
+							return getClass().getDeclaredConstructor().newInstance();
 						}
 						catch (final Exception e)
 						{
@@ -342,6 +498,18 @@ public class VFShell
 					public boolean sendGMCPEvent(final String eventName, final String json)
 					{
 						return false;
+					}
+
+					@Override
+					public boolean sendMPCPPacket(final String command, final MiniJSON.JSONObject doc)
+					{
+						return false;
+					}
+
+					@Override
+					public void doPing(final SessionPing ping, final Object obj)
+					{
+
 					}
 
 					@Override
@@ -648,7 +816,7 @@ public class VFShell
 					}
 
 					@Override
-					public void stopSession(final boolean t1, final boolean t2, final boolean t3)
+					public void stopSession(final boolean disconnect, final boolean t1, final boolean t2, final boolean t3)
 					{
 					}
 
@@ -681,9 +849,9 @@ public class VFShell
 					}
 
 					@Override
-					public List<String> getPreviousCMD()
+					public LinkedList<List<String>> getHistory()
 					{
-						return new Vector<String>();
+						return new LinkedList<List<String>>();
 					}
 
 					@Override
@@ -709,6 +877,11 @@ public class VFShell
 					}
 
 					@Override
+					public void pushMarkedColor(final ColorState newcolor)
+					{
+					}
+
+					@Override
 					public void setLastColor(final ColorState newColor)
 					{
 					}
@@ -721,6 +894,12 @@ public class VFShell
 
 					@Override
 					public ColorState getLastColor()
+					{
+						return CMLib.color().getNormalColor();
+					}
+
+					@Override
+					public ColorState popMarkedColor()
 					{
 						return CMLib.color().getNormalColor();
 					}
@@ -845,7 +1024,7 @@ public class VFShell
 					}
 
 					@Override
-					public void initTelnetMode(final int mobbitmap)
+					public void initTelnetMode(final long mobbitmap)
 					{
 					}
 
@@ -889,6 +1068,18 @@ public class VFShell
 					{
 						return false;
 					}
+
+					@Override
+					public boolean isMTTS()
+					{
+						return false;
+					}
+
+					@Override
+					public boolean getMTTS(final int bitmap)
+					{
+						return false;
+					}
 				};
 				fakeMob.setSession(session);
 				fakeMob.setSoulMate(fakeMob);
@@ -896,8 +1087,8 @@ public class VFShell
 				final Shell shell = new Shell();
 				String command="";
 				String pwd="";
-				System.out.println("CoffeeMud VFShell started. Use 'exit' to quit.");
-				System.out.println("");
+				outStream.println("CoffeeMud VFShell started. Use 'exit' to quit.");
+				outStream.println("");
 				while((command!=null)&&(!command.equalsIgnoreCase("exit")))
 				{
 					try
