@@ -25,10 +25,11 @@ import com.planet_ink.coffee_web.util.ChunkSpec;
 import com.planet_ink.coffee_web.util.CWDataBuffers;
 import com.planet_ink.coffee_web.util.CWConfig;
 import com.planet_ink.coffee_web.util.RequestStats;
+import com.planet_ink.coffee_mud.core.Log;
 import com.planet_ink.coffee_mud.core.collections.Pair;
 
 /*
-   Copyright 2012-2020 Bo Zimmerman
+   Copyright 2012-2025 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -240,9 +241,16 @@ public class HTTPReqProcessor implements HTTPFileGetter
 			{
 				str.append(HTTPHeader.Common.LAST_MODIFIED.makeLine(HTTPIOHandler.DATE_FORMAT.format(response.getLastModified())));
 			}
-			catch(Exception e)
+			catch(final Exception e1)
 			{
-				str.append(HTTPHeader.Common.LAST_MODIFIED.makeLine(HTTPIOHandler.DATE_FORMAT.format(new Date(System.currentTimeMillis()))));
+				try
+				{
+					str.append(HTTPHeader.Common.LAST_MODIFIED.makeLine(HTTPIOHandler.DATE_FORMAT.format(new Date(System.currentTimeMillis()))));
+				}
+				catch(final Exception e2)
+				{
+					str.append(HTTPHeader.Common.LAST_MODIFIED.makeLine("THU, 01 JAN 1970 00:00:00 000"));
+				}
 			}
 		}
 		if(config.isDebugging())
@@ -257,9 +265,11 @@ public class HTTPReqProcessor implements HTTPFileGetter
 			final String formattedDate = HTTPIOHandler.DATE_FORMAT.format(now);
 			str.append(HTTPHeader.Common.DATE.makeLine(formattedDate));
 		}
-		catch(final java.lang.ArrayIndexOutOfBoundsException e)
+		catch(final IndexOutOfBoundsException e)
 		{
 			// just eat it.
+			final String time = (response != null)?(""+response.getLastModified().getTime()):"unk";
+			config.getLogger().severe("Last Modified date of "+time+" caused an arrayindex in HTTPReqProcessor #2.");
 		}
 		str.append(HTTPIOHandler.RANGE_HEADER);
 		str.append(EOLN);
@@ -455,7 +465,7 @@ public class HTTPReqProcessor implements HTTPFileGetter
 			try
 			{
 				stats.startProcessing(); // synchronization is not required, so long as endProcessing is always called
-				final SimpleServlet servletInstance = servletClass.newInstance(); // instantiate a new servlet instance!
+				final SimpleServlet servletInstance = servletClass.getDeclaredConstructor().newInstance(); // instantiate a new servlet instance!
 				if(request.getMethod() == HTTPMethod.GET)
 					servletInstance.doGet(servletRequest, servletResponse);
 				else
@@ -631,7 +641,7 @@ public class HTTPReqProcessor implements HTTPFileGetter
 				HTTPOutputConverter converter;
 				try
 				{
-					converter = converterClass.newInstance();
+					converter = converterClass.getDeclaredConstructor().newInstance();
 					return new CWDataBuffers(converter.convertOutput(config, request, pathFile, HTTPStatus.S200_OK, buffers.flushToBuffer()), System.currentTimeMillis(), true);
 				}
 				catch (final Exception e)
@@ -721,11 +731,21 @@ public class HTTPReqProcessor implements HTTPFileGetter
 						try
 						{
 							HTTPOutputConverter converter;
-							converter = converterClass.newInstance();
+							converter = converterClass.getDeclaredConstructor().newInstance();
 							extraHeaders.put(HTTPHeader.Common.CACHE_CONTROL, "no-cache");
 							final long dateTime=System.currentTimeMillis();
 							if(dateTime >= 0)
-								extraHeaders.put(HTTPHeader.Common.EXPIRES, HTTPIOHandler.DATE_FORMAT.format(Long.valueOf(dateTime)));
+							{
+								try
+								{
+									extraHeaders.put(HTTPHeader.Common.EXPIRES, HTTPIOHandler.DATE_FORMAT.format(Long.valueOf(dateTime)));
+								}
+								catch(final ArrayIndexOutOfBoundsException ae)
+								{
+									Log.errOut("ArrayIndexOutOfBoundsException (format failed): DateTime was "+dateTime);
+									extraHeaders.put(HTTPHeader.Common.EXPIRES, "MON, 01 Jan 1970 01:00:00 000");
+								}
+							}
 							buffers=new CWDataBuffers(converter.convertOutput(config, request, pathFile, HTTPStatus.S200_OK, buffers.flushToBuffer()), dateTime, true);
 							buffers = handleEncodingRequest(request, null, buffers, extraHeaders);
 						}
